--- a/nullatelier.html
+++ b/nullatelier.html
@@ -414,6 +414,7 @@ $(this).next(".body-content").toggle();});
 <br/>
 99<br/>
 이 기분은, 당신과 점점 가까워지는 것 같은 기분. 당신을 조금 더 알 수 있을 것 같은 기분.<br/>
+<br/>
 100<br/>
 염천 아래의 하이 콘트라스트. 녹아서 진득하게 눌어붙은 아스팔트의 냄새.<br/>
 파랗다 못해 푸른 하늘이 깊다. 이제서야 여름을 실감한다.<br/>
@@ -636,7 +637,7 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 151<br/>
 도망치는 게 나쁜 일이라는 둥 입발린 소리나 하는 인간들에게 그럼 어떻게 해야 되냐고 되물어봤자 쓸모 있을 답은 한 마디도 못 돌려주겠지.<br/>
 <br/>
-152
+152<br/>
 너 예뻐.<br/>
 <br/>
 153<br/>
@@ -1685,7 +1686,7 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 평소에 곁에서 늘 격려해 주는 사람이 있었다면, 분명 그의 노력은 지금보다도 빨리 빛을 볼 수 있었겠죠…….<br/>
 <br/>
 392<br/>
-당신이 처음 인지한 색은 녹색이었습니다. 나는 그 날부터, 녹색이 들어간 원피스를 자주 입게 되었습니다.
+당신이 처음 인지한 색은 녹색이었습니다. 나는 그 날부터, 녹색이 들어간 원피스를 자주 입게 되었습니다.<br/>
 이 이야기는, 내가 당신을 만나러 간 날의 이야기입니다. 당신의 연습실에서는 녹색의 소리가 새어나왔습니다.<br/>
 어떻게 당신의 연습실인지 아냐니, 당연하잖아요? 당신이 연주하는 음악에서는 늘 작은 빛이 반짝이고 있으니까요.<br/>
 나는 안에서 이 쪽의 인기척을 눈치채지 못하도록 멈춰서서, 음의 색을 바라봅니다. 방해하고 싶지 않은 광경이었으니까요.<br/>
@@ -1913,7 +1914,8 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 몽환적이고 아름다운 풍경이었다.<br/>
 거리의 건물은 전체적으로 낮아서 하늘이 잘 보인다. 깊고 가느다란 나락은 거리 중앙을 검게 찢어 나누고 있었다.<br/>
 그 틈을 잇는 것은 희고 긴 징검다리 뿐, 마치 횡단보도처럼 보였다.<br/>
-그 거리에서 도망쳐 나온 것은 하늘이 붉어지는 저녁이었다. 저녁에는 사람이 다니지 못 하도록 물을 더 부어서 흰 돌을 없애 버리더라.<br/>
+그 거리에서 도망쳐 나온 것은 하늘이 붉어지는 저녁이었다. <br/>
+저녁에는 사람이 다니지 못 하도록 물을 더 부어서 흰 돌을 없애 버리더라.<br/>
 그 마을의 규칙인지, 어떤지. 더 이상 알 수 있는 것은 없다.<br/>
 <br/>
 440<br/>
@@ -2474,9 +2476,10 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 마지막까지 어떻게 마지막까지 남 생각만 하고 그래? 그러면 안심할 거라고 생각해요?<br/>
 멍청해, 이렇게 피가 나잖아요. 누가 봐도 아프잖아요!<br/>
 그러니까 얼른, 아프다고 한 마디만 해 달라고요…… 안 괜찮다고 해 주세요, ████…? ██,<br/>
-
+<br/>
 550<br/>
-얼마나 혼자 있는 걸 좋아하는지 모르겠다. 이렇게 세상에 보이는 것이 죄다 무서워지는 때에도 의지할 무언가조차 없어서, 어디로 가야 하는지도 모른다.<br/>
+얼마나 혼자 있는 걸 좋아하는지 모르겠다. <br/>
+이렇게 세상에 보이는 것이 죄다 무서워지는 때에도 의지할 무언가조차 없어서, 어디로 가야 하는지도 모른다.<br/>
 <br/>
 551<br/>
 나는 아무것도 아니지만 아무 것이다.<br/>
@@ -2613,6 +2616,7 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 다른 건 필요 없어. 이제는 놓지 않을 거라고 약속했으니까, 외로움을 타는 날 위해서도.<br/>
 심장은 뛰고 있다, 우리는 살아 있다.<br/>
 그걸로 됐다.<br/>
+    <br/>
 577<br/>
 주어진 것은 부족함 없이 모두 완벽했다. 
 이제 이것을 「내」가 어떻게 유효하게 써먹느냐, 그것만이 문제다.<br/>
