--- a/nullatelier.html
+++ b/nullatelier.html
@@ -2618,7 +2618,7 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 그걸로 됐다.<br/>
     <br/>
 577<br/>
-주어진 것은 부족함 없이 모두 완벽했다. 
+주어진 것은 부족함 없이 모두 완벽했다. <br/>
 이제 이것을 「내」가 어떻게 유효하게 써먹느냐, 그것만이 문제다.<br/>
 <br/>
 이제 겨우 20여년을 살아 왔다. 아직 갈 길은 멀다.<br/>
@@ -2680,13 +2680,15 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 안아도 돼, 다 괜찮단다! 아마도.<br/>
 <br/>
 592<br/>
-그건 틀렸어, ████. 내가 어딜 가더라도 따라 와야지. 안 그러니? 내가 당신을 버려야 하는 이유를 잘 모르겠지만…… 뭐어, 그래. 걱정하지 마렴.<br/>
+그건 틀렸어, ████. 내가 어딜 가더라도 따라 와야지. 안 그러니? <br/>
+내가 당신을 버려야 하는 이유를 잘 모르겠지만…… 뭐어, 그래. 걱정하지 마렴.<br/>
 <br/>
 593<br/>
 응, 당신이 부서질 때까지 응원할게요!<br/>
 <br/>
 594<br/>
-아냐, 괜찮아. 걱정할 건 당신이야. 그렇다고 해서 너무 「우리들」을 걱정시키는 건 아마도, 그렇게 좋은 일은 아닐 거야.<br/>
+아냐, 괜찮아. 걱정할 건 당신이야. <br/>
+그렇다고 해서 너무 「우리들」을 걱정시키는 건 아마도, 그렇게 좋은 일은 아닐 거야.<br/>
 <br/>
 595<br/>
 과거는 과거고 꿈은 꿈이니까요. 꿈은 한 순간일 뿐이에요.<br/>
@@ -2704,7 +2706,8 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 그래서 내일은 영정사진을 찍으러 가기로 했습니다.<br/>
 <br/>
 599<br/>
-과거는 그렇다 치더라도 이런 게 언제까지 이어지는 지는 알 수 없으니까요. ████ 씨가 가장 두려워하는 건 미래일 것 같네요.<br/>
+과거는 그렇다 치더라도 이런 게 언제까지 이어지는 지는 알 수 없으니까요. <br/>
+████ 씨가 가장 두려워하는 건 미래일 것 같네요.<br/>
 <br/>
 600<br/>
 가끔 그들이 이번에는 혼자가 아니라서 다행이라는 생각을 한다.<br/>
@@ -2837,7 +2840,7 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 특정한 누군가가 되는 것이 싫었습니다.<br/>
 나는 그냥 나, 다른 누구도 아닌 한편 그 누구도 될 수 없습니다.<br/>
 그냥 지나가는 한 사람, 이것은 여러분에게 있어 틀림없는 사실이며 나를 대신할 것은 얼마든지 있다는 생각으로 안주해 있을 뿐입니다.<br/>
-
+<br/>
 627<br/>
 기억에 남지 않을 가장 좋은 방법은 역시 호칭을 정해 두지 않는 게 아닐까요.<br/>
 만약 눈에 띄어 흔적을 남겨 버린다 하더라도, 그것을 칭할 방법을 찾지 못 한다면 어쩔 수 없는 걸요.<br/>
@@ -3449,10 +3452,12 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 이건 확신할 수 없었다, 전례가 없으니까. 텅 빈 추측과 내적갈등만이 머리 속을 끊임없이 헤집는다.<br/>
 <br/>
 758<br/>
-어른이 되어도 새 구두에 발뒤꿈치가 까지는 건 달라지지 않더라구요..<br/>
+어른이 되어도 새 구두에 발뒤꿈치가 까지는 건 달라지지 않더라구요.<br/>
 <br/>
 759<br/>
-今日も世界は私に無駄なくらいに優しかった。ここまで来れば自分の軟弱さに反吐が出る。私は明日死にたいのにまだ貴方の命日を祝えていない。<br/>
+今日も世界は私に無駄なくらいに優しかった。<br/>
+ここまで来れば自分の軟弱さに反吐が出る。<br/>
+私は明日死にたいのにまだ貴方の命日を祝えていない。<br/>
 <br/>
 760<br/>
 私の居場所が嫌で、逃げ出してから二年になる。私は今日も、重い現実と苦い物語から逃げ続けている。<br/>
@@ -3518,7 +3523,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 <br/>
 767<br/>
 죽는 것조차 귀찮아져서 그림자 아래에 늘어져 있었다.<br/>
-당신은 그런 내 손을 꼭 붙잡고는 햇볕이 따스한 밖으로 데려가 주었다. 다시 돌아가려 해도 몇 번이고 밝은 이곳에 있도록 말려 주었다.<br/>
+당신은 그런 내 손을 꼭 붙잡고는 햇볕이 따스한 밖으로 데려가 주었다. <br/>
+다시 돌아가려 해도 몇 번이고 밝은 이곳에 있도록 말려 주었다.<br/>
 <br/>
 768<br/>
 나는 당신이 나 따위에게 그렇게까지 화내는 것을 이해할 수 없었다.<br/>
@@ -3570,7 +3576,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 기억해달라고 한 말인데, 당연히 그래야죠.<br/>
 <br/>
 781<br/>
-외롭지 않다면 그건 거짓말이죠, 슬프기도 하고. 죽고싶다 죽고싶다 하더니 정말로 덜컥 죽어버린 걸…… 이제 와서 어떻게 할 수 있는 건 아니기도 하고. <br/>
+외롭지 않다면 그건 거짓말이죠, 슬프기도 하고. <br/>
+죽고싶다 죽고싶다 하더니 정말로 덜컥 죽어버린 걸…… 이제 와서 어떻게 할 수 있는 건 아니기도 하고. <br/>
 반대로 당신이 날 봐 주고 있어서 괜찮은 걸지도 모르겠네요.<br/>
 <br/>
 782<br/>
@@ -3610,7 +3617,7 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 790<br/>
 생각해 보면 너는 늘 그랬다. 항상 내게는 물러터졌지, 꼭 너무 익은 나무딸기마냥.<br/>
 그 미숙한 상냥함에 나는 매번 기대고만 있었던 걸지도 모른다.<br/>
-
+<br/>
 791<br/>
 사랑받을 줄 모르는 너는 계속해서 사랑을 주기만 한다.<br/>
 네가 사랑이라고 착각하고 있는 것은 네 일의 성과에 대한 사람들의 인정일 뿐이지.<br/>
@@ -3650,7 +3657,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 그만큼 당신을 지나치게 사랑했나 보다.<br/>
 <br/>
 799<br/>
-네 지나친 생각을 깨부순다. 이렇게라도 하지 않으면 너는 영원히 자기성찰과 자기혐오를 반복하며 살아가게 될 테니까.<br/>
+네 지나친 생각을 깨부순다. <br/>
+이렇게라도 하지 않으면 너는 영원히 자기성찰과 자기혐오를 반복하며 살아가게 될 테니까.<br/>
 <br/>
 800<br/>
 그 늪에서 빠져나오는 게, 끄집어내는 게 얼마나 힘든가를 우리는 안다.<br/>
@@ -3696,7 +3704,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 808<br/>
 あら、そうお見えでしょうか？確かに仰言る通りですけれど、其れには語弊がありましてよ。<br/>
 何時も嫌いって訳でもない、と言って何時も好きで居られる訳もない。簡単且つ単純な事ですのよ。<br/>
-一度曲って仕舞った思考回路を元へ戻すなんて不可能な事なのです、既にご存知でしょうけれど。わたくしは割とそれなりに懸命でしたわ。<br/>
+一度曲って仕舞った思考回路を元へ戻すなんて不可能な事なのです、既にご存知でしょうけれど。<br/>
+わたくしは割とそれなりに懸命でしたわ。<br/>
 今日を生きたかったんですもの。<br/>
 ノルマ終わったのでわたくしは此れにてお暇させて頂きますね、左様なら。<br/>
 <br/>
@@ -4438,7 +4447,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 나쁘지만은 않죠. 그들 나름대로의 「앞으로 나가는 방법」 이라고, 저는 생각한답니다.<br/>
 <br/>
 975<br/>
-그렇지만 그들이 그들의 두 번째 삶에 대해 어떻게 생각하는가, 그걸 우리가 멋대로 단정짓는 건 좋지 않을지도 몰라요. 왜냐하면 우리는 너무 어리기 때문이죠.<br/>
+그렇지만 그들이 그들의 두 번째 삶에 대해 어떻게 생각하는가, 그걸 우리가 멋대로 단정짓는 건 좋지 않을지도 몰라요. <br/>
+왜냐하면 우리는 너무 어리잖아요.<br/>
 <br/>
 976<br/>
 이야기 자체에는 저도 굉장히 흥미가 있어요. 하지만 우리는 앞으로 나아갈 수밖에 없죠.<br/>
@@ -4612,7 +4622,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 어머, 어쩌다가. 그럼 약속하세요, 제 책임은 일절 없다는 걸로.<br/>
 <br/>
 19<br/>
-「私」が死んだら其れっきり私の世界は続かない。その為の「リセ」ットボタンなの。全てを原点へ、無へと還す緋のスイッチ。だから私なら何だってやり直せるわ。<br/>
+「私」が死んだら其れっきり私の世界は続かない。<br/>
+その為の「リセ」ットボタンなの。全てを原点へ、無へと還す緋のスイッチ。だから私なら何だってやり直せるわ。<br/>
 <br/>
 20<br/>
 전 쓸데없는 데에 사과하는 재능이 있어요. 아무튼 다행이에요, 「당신은 제게 중요하니까요」.<br/>
@@ -4923,7 +4934,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 꿈에서밖에 만날 수 없다면, 꿈 따위 꾸지 않는 편이 나을지도.<br/>
 <br/>
 93<br/>
-お花が舞い散ったような名前の付いた日だね。不謹慎でしょうけど、今はまたこうして生きているから、悔やむでなく一つの区切りめとして祝わせて。<br/>
+お花が舞い散ったような名前の付いた日だね。<br/>
+不謹慎でしょうけど、今はまたこうして生きているから、悔やむでなく一つの区切りめとして祝わせて。<br/>
 <br/>
 94<br/>
 晴天と陽だまりと花々が綺麗、あなた達の咲顔はもっと素敵。<br/>
@@ -4938,7 +4950,7 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 그냥…… 안 그런 척 하거나 시간이 지나면서 괜찮아지거나 계속 품고 살거나.<br/>
 자기 나름의 「괜찮아지는 방법」이 있겠지. 없어도…… 뭐, 알아서 찾겠지.<br/>
 <br/>
-97
+97<br/>
 이별이 아프지 않으려면 처음부터 마음을 주지 않으면 되는 일이야. 간단하지 않니?<br/>
 ……될 것 같냐.<br/>
 <br/>
@@ -4948,7 +4960,7 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 そして私はそれが絶望的にお上手。<br/>
 <br/>
 99<br/>
-相手に非があれど脆ければ悪者になるのは此方であって、如何すれば良いか私にはてんでわからない。
+相手に非があれど脆ければ悪者になるのは此方であって、如何すれば良いか私にはてんでわからない。<br/>
 どうしても傷つくんだったら好き放題言っちゃって良いんじゃなくって？そう諦めたいです。<br/>
 <br/>
 100<br/>
@@ -4961,11 +4973,12 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 <div class="body-content">
 101<br/>
 そうよ、いつ私が消えちゃうかわからないじゃないの……。<br/>
-私は嘘だけは絶対吐かないって決めたの、重さが欲しいわ。ちゃんと地に足が附けられる様な……「安定さ」なのよね……やっぱりそう。<br/>
+私は嘘だけは絶対吐かないって決めたの、重さが欲しいわ。<br/>
+ちゃんと地に足が附けられる様な……「安定さ」なのよね……やっぱりそう。<br/>
 <br/>
 102<br/>
 誰の救いにもなれやしないわよ。<br/>
-自分を救えるのは自分だけで、他人に救われたと勘違いしたらその先なんて依存症極めてしまうからそれはもう救いなんかじゃなくってよ。
+自分を救えるのは自分だけで、他人に救われたと勘違いしたらその先なんて依存症極めてしまうからそれはもう救いなんかじゃなくってよ。<br/>
 だからと言って一人でどうにかしろと言うには人が冷たすぎると思わなくって？<br/>
 そう最初から言い放つのは私には無理ねえ。<br/>
 <br/>
@@ -4973,7 +4986,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 죽고 싶다면 손을 잡아 줄게.<br/>
 <br/>
 104<br/>
-今は一緒に死んであげる女性なんていなくってよ。私もあなたを救えないけれど、あなたを飲み込もうとするそれが何なのかは、たぶん知っているわ。<br/>
+今は一緒に死んであげる女性なんていなくってよ。<br/>
+私もあなたを救えないけれど、あなたを飲み込もうとするそれが何なのかは、たぶん知っているわ。<br/>
 考えないでいて、私と、お話をしましょう？<br/>
 <br/>
 105<br/>
@@ -5211,6 +5225,7 @@ Though I ain't kinda a psychologist.<br/>
 159<br/>
 그야 늘 지켜보고 있는걸. 마냥 유약하지만은 않기도 하고, 열심히 사는 사람이니까, 그만큼 행복해졌으면 좋겠다 싶어.<br/>
 우린 지켜보는 것밖에 할 수 있는 게 없지만서도요.<br/>
+    <br/>
 160<br/>
 시계 바늘을 거꾸로 돌리는 것에 성공했어.<br/>
 아, 아마 난 이 세계에서 혼자, 유일하게 결말의 한 부분을 아는 사람이겠지. <br/>
@@ -5742,7 +5757,8 @@ Though I ain't kinda a psychologist.<br/>
 공간을 잘라낸 듯 새하얀 것은, 색을 빼앗긴 만큼의 공간을 잡아먹고 있다. <br/>
 하지만 그래봤자 그것은 1.5m도 되지 않을, 작은 구멍에 지나지 않는다.<br/>
 <br/>
-空間を切り取るほど真っ白で、奪われた彩の分の空間を食い潰して居る。ただそれはとても小さな、1.5mもしない小さな孔に過ぎない。<br/>
+空間を切り取るほど真っ白で、奪われた彩の分の空間を食い潰して居る。<br/>
+ただそれはとても小さな、1.5mもしない小さな孔に過ぎない。<br/>
 <br/>
 272<br/>
 靉靆ばかりが積って逝く。逢いたい人がまた浮かび上がる、私の頭の中に。<br/>
@@ -5757,7 +5773,8 @@ Though I ain't kinda a psychologist.<br/>
 <br/>
 274<br/>
 未だ私が向こう岸に身を向けている事を忘れてはならない。まだ時が来ていない。<br/>
-淡い望みを待つのは淋しい。そして肉体は今月も元気だと信号を送ってきて、今そんなこと言う場合じゃないんだけど。身と心が散けてるわ、全く。皮肉過ぎる。<br/>
+淡い望みを待つのは淋しい。そして肉体は今月も元気だと信号を送ってきて、今そんなこと言う場合じゃないんだけど。<br/>
+身と心が散けてるわ、全く。皮肉過ぎる。<br/>
 <br/>
 275<br/>
 ……많이 무섭고 힘들었지, 이제 괜찮아. 다 괜찮아. 지금 그렇지 않아도, 전부 괜찮아질 거야.<br/>
@@ -5881,7 +5898,7 @@ Panopticon 全方位観察システム、あなたたちを何時も何処でも
 302
 心臓の脈が地響きの様大きく五月蝿く、身体をも揺らしてしまう。たかが掌くらいの小さな肉塊の癖に、揺さぶられる。<br/>
 <br/>
-일순 땅울림이라 착각할 정도로 시끄러운 맥박이 몸 전체를 뒤흔든다. 고작 주먹만한 고깃덩이가 나를 휘감아 잡고 있다.
+일순 땅울림이라 착각할 정도로 시끄러운 맥박이 몸 전체를 뒤흔든다. 고작 주먹만한 고깃덩이가 나를 휘감아 잡고 있다.<br/>
 <br/>
 303<br/>
 実はね、本当はね、あたし、待つのは嫌いなの。待っててばかりじゃ寂しくて寂しくてしょうがないから。<br/>
@@ -5920,7 +5937,7 @@ Well, we are the same, essentially. But we are different in the decisive point, 
 Do you think it really sucks?<br/>
 <br/>
 309<br/>
-어제부터 빨래를 하거나 청소를 하거나…… 주변을 정리하는 꿈을 계속 이어서 꾸고 있다. 그건, 내 원망 願望 이다.
+어제부터 빨래를 하거나 청소를 하거나…… 주변을 정리하는 꿈을 계속 이어서 꾸고 있다. 그건, 내 원망 願望 이다.<br/>
 곧게 뻗은, 아무것도 없는 탁 트인 길을 몇 시간이고 걷다 보면 깔끔하게 잘린 땅과 노란 DEAD END 표지판이 발걸음을 막는다. <br/>
 그 앞에는 파란, 파란 하늘만이 존재했다. 돌아가고 싶지 않았던 나는 하늘을 향해 한 발짝 내딛었다. <br/>
     <br/>
@@ -6240,11 +6257,13 @@ Is there really never meaning to ESCAPADE?<br/>
 ‪남 걱정할 때가 아니란 말이야.‬<br/>
 <br/>
 376<br/>
-言葉も通じない世界で一人、駅の場所さえわからず小一時間彷徨っていた。乗れたから気を抜かして慢心している。安堵している。
+言葉も通じない世界で一人、駅の場所さえわからず小一時間彷徨っていた。<br/>
+乗れたから気を抜かして慢心している。安堵している。<br/>
 始発便に乗ったので後発、そのまた後発の電車が如何だったかは知らない。<br/>
 川に同じ水は決して流れない。ただ、行き着く先だけは屹度私と同じだろう。<br/>
 推測と計画は役に立つものの、実質的な答えになることは無い。結局それらも想像の別名に過ぎなかった。<br/>
-実際当たらなければ何も解らない。故に一度の機会を掴まなければいけなかった。タイミングは実に大事だった。<br/>
+実際当たらなければ何も解らない。故に一度の機会を掴まなければいけなかった。<br/>
+タイミングは実に大事だった。<br/>
 同じものは存在し得ないということを、私はその時理解した。<br/>
 自分の拙い唄も、絵も、息さえも一つ一つ違っていた。自分で自分を真似しても同じ自分にはならないし、なれない。知っていたか。
 かと言ってそれが如何したかっていうと、別段如何もしてなくて、ただ、今此処に居る手前だけこそが自分なのだと、認識しておかないといけないのだ。<br/>
@@ -6461,7 +6480,8 @@ All of these fruited by you<br/>
 <br/>
 夜の東京街は本当にいけない、お家に帰りたくなくなってしまうんです。<br/>
 成人になったばかりの頃なんて、すんごいぶらぶらしてたことをまだ覚えています。<br/>
-今は絶賛療養中ってわけで、少しは大人しくなってますが、大丈夫になる日を願って歌いました。辛いけど、元気になれるように頑張ります。<br/>
+今は絶賛療養中ってわけで、少しは大人しくなってますが、大丈夫になる日を願って歌いました。<br/>
+辛いけど、元気になれるように頑張ります。<br/>
 <br/>
 私もあなたも東京の街に溶け込んだ人の中のひとりでしょうね、<br/>
 そんなみんなに、おはようございます。<br/>
@@ -6487,7 +6507,8 @@ All of these fruited by you<br/>
 <br/>
 お前を見つめている50双の眼だ。<br/>
 透明と言われ続けて透明に為る。<br/>
-私はもう飽きた。のに誰も私を殺してくれない。そのままふわりと、お前の頭の中から消える。<br/>
+私はもう飽きた。のに誰も私を殺してくれない。<br/>
+そのままふわりと、お前の頭の中から消える。<br/>
 泡沫の如く、果敢無い。<br/>
 <br/>
 私はひとになれなかったものだった。お前よりは出来損ないだった。<br/>
@@ -6586,16 +6607,21 @@ All of these fruited by you<br/>
 「一体何をなくしたのです？」と、貴方は当たり前なことを訊いてくる。<br/>
 まあ到底大切なものをなくしたひとの態度には思えないからではないかしら。<br/>
 貴方が疑問に思うのもまた当たり前。何をなくしたのか、実はそれも思い出せないんです。<br/>
+    <br/>
 私、そもそも何をなくしたんだっけ？<br/>
 そう、私って「大切なもの」の記憶すらもなくしてしまってるのね。<br/>
 記憶が剥がれ落ちる感覚だけが鮮明で、何のことだったかすら忘れてしまうことだって沢山あったわね。<br/>
 その所為で貴方に、いいえきっと貴方だけじゃない、周りのひとたちにも散々迷惑を掛けてきたのでしょうね。<br/>
 そうだわ、やっぱり、探しに行かなくちゃ。……何処に？<br/>
 そこまで考え込んだ私はソファーから跳ね起きた。向こう側に座っていた貴方を通り過ぎて玄関先へと向かう。揺らぐ長い髪がなんだか面倒くさい。<br/>
-「ちょっと待って、どこへ……！」歩き振りだけしっかりした私を、慌てて引き留めようとする。どうして？<br/>
-重圧感の大きな扉、その手前で振り返る私。そして少し離れた距離で、すぐにでも割れそうなものをどう触ればいいかわからないような、困った様子で立ち尽くしている貴方。<br/>
-『何？』心なしか冷たい声と共に、向けられた目線を合わせた。<br/>
+「ちょっと待って、どこへ……！」<br/>
+歩き振りだけしっかりした私を、慌てて引き留めようとする。どうして？<br/>
+重圧感の大きな扉、その手前で振り返る私。<br/>
+そして少し離れた距離で、すぐにでも割れそうなものをどう触ればいいかわからないような、困った様子で立ち尽くしている貴方。<br/>
+『何？』<br/>
+心なしか冷たい声と共に、向けられた目線を合わせた。<br/>
 合っているかはわからないけど、そんなこと今はどうだっていいの。<br/>
+    <br/>
 貴方はいつもそう。心配し過ぎ、過保護、でも拘束といったわけでもない。<br/>
 我儘な私に合わせてくれる、ただひたすらに良すぎる人。滅多にいないのはわかっているわ。<br/>
 なのに私がそれさえも飽きてきてるなんてね、本当に出来てないよね。私は本当に良い人にはなれそうにない。<br/>
@@ -6605,7 +6631,8 @@ All of these fruited by you<br/>
 と、思ったその時、静寂が破けた。<br/>
 「今日は出ない方が良いと思うんです」<br/>
 ……今日は？<br/>
-扉から手を離し、来た道を戻った。貴方が言うからには、何かしらの理由がきっとある筈よ。そんな意味有りげの言葉なら尚更に。
+扉から手を離し、来た道を戻った。貴方が言うからには、何かしらの理由がきっとある筈よ。<br/>
+そんな意味有りげの言葉なら尚更に。
 ベッドに寛ぐと、何故か身体が重たく感じる。倦怠感はいつものことだけど、何かが違う。<br/>
 なんかちょっと違う、私のものじゃない気がしてならない。全てがハリボテとなった。<br/>
 『貴方は本物？』<br/>
@@ -7181,7 +7208,9 @@ All of these fruited by you<br/>
 이것도 시간이 흐르면서 점점 변해가니까, 선이든 악이든 절대적인 건 존재하지 않는다는 게 지론이에요.<br/>
 <br/>
 499<br/>
-양심은 학생용 지우개 같은 거야. 계속 닳지만 아주 없어지지는 않는 거 있잖아, 나중엔 닳으니까 어느 정도는 괜찮아. 오히려 지금은 그 정도가 딱 좋지.<br/>
+양심은 학생용 지우개 같은 거야. <br/>
+계속 닳지만 아주 없어지지는 않는 거 있잖아, 나중엔 닳으니까 어느 정도는 괜찮아. <br/>
+오히려 지금은 그 정도가 딱 좋지.<br/>
 <br/>
 500<br/>
 좁게 살지 마. 사람은 뭐든 커야 돼.<br/>
