--- a/utamihon.html
+++ b/utamihon.html
@@ -615,7 +615,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 ワールドイズマイン<br/>
 <a href="https://www.youtube.com/watch?v=HjNU_XF6a4w">忘れじの言の葉</a><br/>
 私たちは未来の花<br/>
-わたしは禁忌<br/>
+<a href="https://youtu.be/gCqlcIgzfnY">わたしは禁忌</a><br/>
 <a href="https://www.youtube.com/watch?v=QRuAV3XSZV0">私は、私達は</a><br/>
         <br/>
         <br/>
@@ -623,7 +623,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
             <h2 class="body-title">数字・その他</h2>
 <div class="body-content">
 <h3>0〜</h3><br/>
-<a href="https://soundcloud.com/not-sotomine/1000a">1000年生きてる</a><br/>
+<a href="https://youtu.be/8kRCjrKjkRs">1000年生きてる</a><br/>
 1/6 -out of the gravity-<br/>
 13's memory<br/>
 1925<br/>
