--- a/utamihon.html
+++ b/utamihon.html
@@ -151,9 +151,9 @@ URLは既に音源化できているものですので、<span style="color: #e9
 廻廻奇譚<br/>
 快晴<br/>
 輝いた<br/>
-<a href="https://www.youtube.com/watch?v=w_VydXtnEfJVY">限りなく灰色へ</a><br/>
-<a href="https://www.youtube.com/watch?v=w_G3Xa4DilBHo">覚醒</a><br/>
-カゲロウデイズ<br/>
+<a href="https://www.youtube.com/watch?v=VydXtnEfJVY">限りなく灰色へ</a><br/>
+<a href="https://www.youtube.com/watch?v=G3Xa4DilBHo">覚醒</a><br/>
+<a href="https://www.youtube.com/watch?v=cB0ARP4WdTE">カゲロウデイズ</a><br/>
 過食性：アイドル症候群<br/>
 <a href="https://soundcloud.com/not-sotomine/kazenifukaretemo">風に吹かれても</a><br/>
 風待ちハローワールド<br/>
@@ -341,7 +341,7 @@ siGrE<br/>
 チューリングラブ<br/>
 <a href="https://www.youtube.com/watch?v=VlaTKlee138">チュルリラ・チュルリラ・ダッダッダ！</a><br/>
 猪突猛進ガール<br/>
-チルドレンレコード<br/>
+<a href="https://www.youtube.com/watch?v=N1vblrSlMzg">チルドレンレコード</a><br/>
         <br/>
         <br/>
 <h3>つ</h3><br/>
@@ -615,7 +615,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 ワールドイズマイン<br/>
 <a href="https://www.youtube.com/watch?v=HjNU_XF6a4w">忘れじの言の葉</a><br/>
 私たちは未来の花<br/>
-<a href="https://youtu.be/gCqlcIgzfnY">わたしは禁忌</a><br/>
+<a href="https://www.youtube.com/watch?v=gCqlcIgzfnY">わたしは禁忌</a><br/>
 <a href="https://www.youtube.com/watch?v=QRuAV3XSZV0">私は、私達は</a><br/>
         <br/>
         <br/>
@@ -746,6 +746,7 @@ WORLD'S END UMBRELLA<br/>
 <a href="https://www.youtube.com/watch?v=DaHnkN7a3yM">world.execute(me);</a><br/>
 World-line<br/>
 world.search(you);<br/>
+<a href="https://www.youtube.com/watch?v=bg07E08YCbg">you</a><br/>
 <a href="https://www.youtube.com/watch?v=9P97CpyhN6M">your℃</a><br/>
 <a href="https://www.youtube.com/watch?v=ZpNaXAnepNI">Your reality</a><br/>
             <br/>
