--- a/utamihon.html
+++ b/utamihon.html
@@ -520,7 +520,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
         <br/>
 <h3>め</h3><br/>
 <a href="https://www.youtube.com/watch?v=PeQUceKdo_o">名探偵連続殺人事件</a><br/>
-メカクシコード<br/>
+<a href="https://https://soundcloud.com/not-sotomine/mekakucity">メカクシコード</a><br/>
 巡る世界のレクイエム<br/>
 めざめのうた<br/>
 <a href="https://www.youtube.com/watch?v=V9gy8AHvoGw">めめめめめ</a><br/>
