--- a/utamihon.html
+++ b/utamihon.html
@@ -72,6 +72,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 貴方解剖純愛歌~死ね~<br/>
 <a href="https://www.youtube.com/watch?v=y-BHvDy7sqQ">あの世行きのバスに乗ってさらば。</a><br/>
 <a href="https://www.youtube.com/watch?v=NXq7AteDMlc">アブソリュート</a><br/>
+アポカリプスなう<br/>
 <a href="https://www.youtube.com/watch?v=bZTzd3_VXwc">天ノ弱</a><br/>
 雨夢楼<br/>
 <a href="https://www.youtube.com/watch?v=zcpRhjsxAnY">雨とペトラ</a><br/>
@@ -617,6 +618,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 私たちは未来の花<br/>
 <a href="https://www.youtube.com/watch?v=gCqlcIgzfnY">わたしは禁忌</a><br/>
 <a href="https://www.youtube.com/watch?v=QRuAV3XSZV0">私は、私達は</a><br/>
+<a href="https://www.youtube.com/watch?v=H5FxKVHsma4">ワンダラー</a><br/>
         <br/>
         <br/>
     </div>
