--- a/nullatelier.html
+++ b/nullatelier.html
@@ -553,7 +553,7 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 <br/>
 130<br/>
 만약에 네 말대로…… 너 대신에 다른 애가 태어났으면? 그리고 네가 태어나지 않았다면.<br/>
-그러면…… 나는 그 누구도 만나지 못했을 수도 있지. 어때?
+그러면…… 나는 그 누구도 만나지 못했을 수도 있지. 어때?<br/>
 <br/>
 131<br/>
 내가 네 기분을 어떻게 해 줄 수 있을 사람이라는 생각은 절대 안 하지만, 지금 여기서 이렇게 네 옆에서 함께 울적할 수 있는 건 나밖에 없으니까.<br/>
@@ -789,7 +789,7 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 188<br/>
 인간에 다가서는 것이 두렵나요?<br/>
 이 방에 들어온 안드로이드는, 모두 그렇게 말했답니다.<br/>
-
+<br/>
 189<br/>
 감정에 한계라는 것이 있을까요?<br/>
 감각에 한계라는 것이 있을까요?<br/>
@@ -814,7 +814,7 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 194<br/>
 ……하하, 난 그렇게 언제나…… 선택을 미뤄오면서 살았던 건가.<br/>
 <br/>
-195
+195<br/>
 하지만 네가 움직일 때까지, 모든 것이 끝날 일은 오지 않을 거다.<br/>
 「알겠지? ████.」<br/>
 결정할 시간이야.<br/>
@@ -1156,7 +1156,8 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 그래도, 그럼에도 살아 있어서, 받을 수 있는 선물인걸. 그렇죠?<br/>
 <br/>
 271<br/>
-작다고 해서 얕보이면 곤란하거든, 우습지? 이런 거. 주위에서 보면 이상적인 여성의 이미지와는 정반대로 전력질주하고 있어, 나는!<br/>
+작다고 해서 얕보이면 곤란하거든, 우습지? 이런 거. <br/>
+주위에서 보면 이상적인 여성의 이미지와는 정반대로 전력질주하고 있어, 나는!<br/>
 적을 만들기 쉬운, 미움받기 쉬운 내가 나는 엄청나게 좋아!<br/>
 <br/>
 272<br/>
@@ -1544,7 +1545,7 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 그래도 메마른 기분은 나아지지 않아. 무언가에 마음을 쏟아붓는 만큼 돌려받지 못하고 있는 건가. <br/>
 내가 가장 마음을 쏟아붓는 상대는 나 자신인데, 이상하기도 하지. 모든 일은 내 고집대로 나아갔는데.<br/>
 적어도 이유를 알았으면 좋겠다, 그럼 그 탓이라도 했지.<br/>
-
+<br/>
 363<br/>
 나는 내가 그릇이 큰 건 아니라도 몇 명쯤 받아줄 여유는 된다고 생각하고 있어요. <br/>
 그리고 그렇게 행동해 왔구요. 인간관계든 돈이든 상담은 프로예요, 지금도요.<br/>
@@ -2722,7 +2723,8 @@ O-9의 기적으로 당신이 이렇게, 다시 내 곁에 있으니까요.<br/>
 너무 투명해서 내 시선 끝에 있는 건 허공이 아니라 어쩌면 어딘가의 별일지도 모릅니다.<br/>
 <br/>
 602<br/>
-어제 편지를 받았어요. 내가 살면서 듣고 싶었던, 하지만 아무도 해주지 않았던 말들, 당신의 이야기, 당신이 생각하는 내가, 정성스럽게 꽉꽉 담겨져 있어서.<br/>
+어제 편지를 받았어요. <br/>
+내가 살면서 듣고 싶었던, 하지만 아무도 해주지 않았던 말들, 당신의 이야기, 당신이 생각하는 내가, 정성스럽게 꽉꽉 담겨져 있어서.<br/>
 저는 편지가 좋아요, 말보다도 부드럽게 더 많은 걸 전할 수 있으니까요.<br/>
 못 전해줬던 내 마음도, 오해를 불렀을 잘못된 한 마디도, 나는 너무 서투르니까 전부 고칠 수는 없겠지만 그렇더라도.<br/>
 그나마 내가 열심히 썼다는 것까지도 전해 주는 게 편지니까요.<br/>
@@ -3386,6 +3388,7 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 사람이 누군가를 좋아하면 내가 이 사람과 더 어떻게 가까워지고 싶다, "특별한" 무언가가 되고 싶다, 그런 감정이 생긴다며.<br/>
 언젠가는 찾아온다는 게 뭐야? 우리 엄마는 그렇게 말했는데. <br/>
 없었고, 없고, 앞으로도 없는 건가?<br/>
+<br/>
 742<br/>
 나약함이 나쁜 건 아니라는 걸 이해하는 데에는 오랜 시간이 걸려요.<br/>
 <br/>
@@ -3399,7 +3402,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 그 자리에 분명 두 명이 더 있었음에도, 이것을 기억하는 사람은 저 뿐인, 그런 이야기랍니다.<br/>
 <br/>
 746<br/>
-당신의 텅 빈 눈동자가 불현듯 이 쪽을 향하지만, 그 흐릿한 눈에 비치는 건 내가 아닌 당신의 과거의 찌꺼기와 같은 무언가일 거라는 생각을 한다.<br/>
+당신의 텅 빈 눈동자가 불현듯 이 쪽을 향하지만, <br/>
+그 흐릿한 눈에 비치는 건 내가 아닌 당신의 과거의 찌꺼기와 같은 무언가일 거라는 생각을 한다.<br/>
 머리부터 발끝까지 붕대에 둘둘 감긴 당신은 너무나도 애처롭게 보였다.<br/>
 <br/>
 747<br/>
@@ -3594,7 +3598,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 <br/>
 785<br/>
 自己愛と自己矛盾に浸っている。<br/>
-私は他人にしか「自分が他人から聞きたかった言葉」所謂都合の良いことが話せなくて、他人と話しながらそれをその相手じゃなく常に自分に言い聞かせるのだ。<br/>
+私は他人にしか「自分が他人から聞きたかった言葉」所謂都合の良いことが話せなくて、<br/>
+他人と話しながらそれをその相手じゃなく常に自分に言い聞かせるのだ。<br/>
 元がわからない反射光だけを浴びて生きていく。<br/>
 <br/>
 786<br/>
@@ -4182,11 +4187,13 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 그리고 당신들이 이걸 알고 있다는 것을 나는 알고 있다. 충분하다.<br/>
 <br/>
 911<br/>
-요 근래 매우 기분이 좋았다. 바로 얼마 전에 스트레스 해소를 할 기회가 생겼던 것도 모자라, 친구도 이름도 얼굴도 없던 한 사람에게, 친구와 이름과 얼굴을 줄 수 있었던 것이다.<br/>
+요 근래 매우 기분이 좋았다. 바로 얼마 전에 스트레스 해소를 할 기회가 생겼던 것도 모자라, <br/>
+친구도 이름도 얼굴도 없던 한 사람에게, 친구와 이름과 얼굴을 줄 수 있었던 것이다.<br/>
 기분 좋은 일이 두 개나 생겼으니 좋지 않을 수가 없었다.<br/>
 <br/>
 912<br/>
-인간을 좋아할 일이 평생토록 없을 그 인간들은, 자신들이 인간이라는 것조차도 혐오스럽던 그 인간들은 아주 잠깐뿐이든 뭐든, 그들이 원하는 바를 이룬 것마냥 달성감과 만족감에 깊게 빠져들어 있었다.<br/>
+인간을 좋아할 일이 평생토록 없을 그 인간들은, 자신들이 인간이라는 것조차도 혐오스럽던 그 인간들은 아주 잠깐뿐이든 뭐든, <br/>
+그들이 원하는 바를 이룬 것마냥 달성감과 만족감에 깊게 빠져들어 있었다.<br/>
 <br/>
 913<br/>
 그들은 그들만의 세계로 들어간다. 분명 이런 감각은 접해본 적이 없음에도, 그들은 새 감각을 찾아 그들의 안을 파고 들어간다.<br/>
@@ -4200,7 +4207,7 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 <br/>
 916<br/>
 검은 머리 시절에는 괴담에 자주 나오는 일본 인형같다는 말을 자주 들었어요. 지금도 인형같다는 말은 듣지만.<br/>
-후리소데를 처음 입었을 때 비로소 이해가 됐어요. 또 나는 빨간색이 어울린다는 것도.
+후리소데를 처음 입었을 때 비로소 이해가 됐어요. 또 나는 빨간색이 어울린다는 것도.<br/>
 <br/>
 917<br/>
 그 이상 내 꿈을 박살내면 너희들도 사이좋게 박살내주겠어.<br/>
@@ -4297,7 +4304,8 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 938<br/>
 나와 당신은 당신의 첫번째 결말을 알고 있다. 첫번째 결말이라 함은, 1943년 11월 18일 4시 25분에 발생한 당신의 사망을 의미한다.<br/>
 그렇게 이미 끝을 맺었던 당신의 삶은 2017년 6월 25일에 다시 기동되었다.<br/>
-연금술로 인과를 바꾸는 것은 불가능하지만, 강한 개념들의 덩어리에 이미 한 번 존재했던 인격의 기억을 부여, 기록을 재구축함으로 해당 인물의 마지막 기억에서부터 삶을 이어서 진행하는 것 정도는 할 수 있었다.<br/>
+연금술로 인과를 바꾸는 것은 불가능하지만, 강한 개념들의 덩어리에 이미 한 번 존재했던 인격의 기억을 부여, <br/>
+기록을 재구축함으로 해당 인물의 마지막 기억에서부터 삶을 이어서 진행하는 것 정도는 할 수 있었다.<br/>
 말이 그럴듯할 뿐이지, 반혼술이나 마찬가지다. 근대라 함은 사실적인 기록이 비교적 많이 남아 있기 때문이었다.<br/>
 아직은 실제 자손의 증언도 들을 수 있는 시대니까, 정확성이 부족하다면 직접 물어도 좋다. 지금은 그런 시대다.<br/>
 『이것도 결코 좋은 일이라고는 할 수 없겠지. 안 그러니?』<br/>
@@ -4453,6 +4461,7 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 976<br/>
 이야기 자체에는 저도 굉장히 흥미가 있어요. 하지만 우리는 앞으로 나아갈 수밖에 없죠.<br/>
 지금은 그 대답으로 충분해요.<br/>
+<br/>
 977<br/>
 여보세요, 들리세요? 혹시 나, 잊어버렸어?<br/>
 어쩔 수 없지. 익숙해. 괜찮아. 누가 기억해주길 바랐다면 적어도 이름 정도는 제대로 있었어야지 않겠어?
@@ -4476,13 +4485,14 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 <br/>
 982<br/>
 아, 정말 위치와 상관없이 직장인의 비애가 따로 없구나.<br/>
-역시 쓴 커피가 달게 느껴질 땐 일의 힘듦을 어느 정도 돌아봐야 한다고 생각해요. ……사회인답지 않은 생각일까요?
+역시 쓴 커피가 달게 느껴질 땐 일의 힘듦을 어느 정도 돌아봐야 한다고 생각해요. ……사회인답지 않은 생각일까요?<br/>
 <br/>
 983<br/>
 묘비에 말을 거는 소녀라, 조금 정신이상자 같긴 하지만 뭐 어때요. 저는 정말로 정신이상자인걸.<br/>
 <br/>
 984<br/>
-추운 날씨에 몸은 조금 지쳤지만, 기분이 너무 포근하고 좋았습니다. 내가 하고 싶은 것을 만족스럽게 했을 때보다 더 기쁜 게 있을까요?<br/>
+추운 날씨에 몸은 조금 지쳤지만, 기분이 너무 포근하고 좋았습니다. <br/>
+내가 하고 싶은 것을 만족스럽게 했을 때보다 더 기쁜 게 있을까요?<br/>
 <br/>
 985<br/>
 선생님, 저는 그냥 외로웠던 거네요.<br/>
@@ -4637,6 +4647,7 @@ DNA의 형태를 띤, 의미 없는 문자의 나열.<br/>
 누구의 말이냐고 물어도, 딱히 대화 상대가 제멋대로 바뀌지는 않았으니까 걱정 마세요.<br/>
 그 점에 대해서는 저도 알고 있어요.<br/>
 그리고…… 수신자 씨에게 양해도 구하지 않고 수화기를 다른 이에게 넘기는 건 예의가 아닌걸요.<br/>
+<br/>
 23<br/>
 내가 귀찮게 하는 게 아니라면 됐어. 그냥, 네가 여기 있어서 다행이라는 생각을 했단다. 우습지 않니.<br/>
 <br/>
@@ -5225,7 +5236,7 @@ Though I ain't kinda a psychologist.<br/>
 159<br/>
 그야 늘 지켜보고 있는걸. 마냥 유약하지만은 않기도 하고, 열심히 사는 사람이니까, 그만큼 행복해졌으면 좋겠다 싶어.<br/>
 우린 지켜보는 것밖에 할 수 있는 게 없지만서도요.<br/>
-    <br/>
+<br/>
 160<br/>
 시계 바늘을 거꾸로 돌리는 것에 성공했어.<br/>
 아, 아마 난 이 세계에서 혼자, 유일하게 결말의 한 부분을 아는 사람이겠지. <br/>
@@ -5322,6 +5333,7 @@ Though I ain't kinda a psychologist.<br/>
 あたしはあなたにとって何ものでもないのに、あなたはあたしの一部になってしまっているんだから。<br/>
 こんな仕事に就かなければ良かったとか、最初から知らなければ良かったとか。<br/>
 最初から断ってれば良かったとか。最初から聞かなければ良かったとか。<br/>
+<br/>
 178<br/>
 나는 그런 걸 좋아하거든요. 제 4의 벽을 깨려는 시도? 라고나 할까. <br/>
 식상한 건 싫지만, 요즘은 다들 개성이 있어서 재미있더라구. <br/>
@@ -5389,7 +5401,9 @@ Though I ain't kinda a psychologist.<br/>
 나쁜 사람을 어떻게 하고 싶냐고요? 어떤 방식으로든 그만큼의 벌을 받아야죠.<br/>
 <br/>
 192<br/>
-용서받을 수 있을 일인지, 되돌릴 수 있는 일인지, 잘못했다는 걸 알았다면 이제부터 안 그러면 된다고 할 수 있는 일인지, 그 악행이 그 스스로의 의지였는지. 이런 건 나중에 생각해.<br/>
+용서받을 수 있을 일인지, 되돌릴 수 있는 일인지, <br/>
+잘못했다는 걸 알았다면 이제부터 안 그러면 된다고 할 수 있는 일인지, 그 악행이 그 스스로의 의지였는지. <br/>
+이런 건 나중에 생각해.<br/>
 <br/>
 193<br/>
 그에 기반한 판결에는 이론을 둘 생각이 없습니다.<br/>
@@ -5427,7 +5441,8 @@ Though I ain't kinda a psychologist.<br/>
 <div class="body-content">
 201<br/>
 構わないどころかむしろ嬉しいです、暖かく眠れる居場所になって差し上げます。<br/>
-まだみんなと比べるとずっと子供で、わからないことだらけで、なにものでもないけれど、みんなが、あなたが、眠りながら少しでももっと人の暖かさを感じられるよう尽くしましょう。<br/>
+まだみんなと比べるとずっと子供で、わからないことだらけで、なにものでもないけれど、<br/>
+みんなが、あなたが、眠りながら少しでももっと人の暖かさを感じられるよう尽くしましょう。<br/>
 ですからずっと一緒に居てくださいね。<br/>
 <br/>
 202<br/>
@@ -5442,7 +5457,8 @@ Though I ain't kinda a psychologist.<br/>
 私があなたに見せる率直な、出どころの知れない好感を、あなたは拒む事なく受け容れてくれた。<br/>
 やや照れる姿は何処と無く可愛らしかった。<br/>
 私は益々あなたの事が好きになった。<br/>
-お陰で余計な事も、愉快な事も、笑っちゃう事も、悲しい事も、厭な事も、辛い事も、苦しい事も、痛い事も沢山知ってしまったけど、其の分あなたに近付く事は出来たかな、と思っているわね。<br/>
+お陰で余計な事も、愉快な事も、笑っちゃう事も、悲しい事も、厭な事も、辛い事も、苦しい事も、痛い事も沢山知ってしまったけど、<br/>
+其の分あなたに近付く事は出来たかな、と思っているわね。<br/>
 <br/>
 205<br/>
 私は貴方たちの魂が幸せで安らかに眠ることを祈る。<br/>
@@ -5895,7 +5911,7 @@ Panopticon 全方位観察システム、あなたたちを何時も何処でも
 周りの観察対象──あなたたち──が固く囲む、概念の輪に閉じ込められた儘、私はわたしとあなたを延々と観続ける。<br/>
 そんなことはおもってもないクセに。<br/>
 <br/>
-302
+302<br/>
 心臓の脈が地響きの様大きく五月蝿く、身体をも揺らしてしまう。たかが掌くらいの小さな肉塊の癖に、揺さぶられる。<br/>
 <br/>
 일순 땅울림이라 착각할 정도로 시끄러운 맥박이 몸 전체를 뒤흔든다. 고작 주먹만한 고깃덩이가 나를 휘감아 잡고 있다.<br/>
@@ -6121,7 +6137,8 @@ Do you think it really sucks?<br/>
 하나 확실한 것은 어쨌거나 저쨌거나 내가 이기적이고 독선적인 사람이라는 건 부정할 수 없다는 것이다.<br/>
 <br/>
 347<br/>
-どんな「概念」も、所詮は人間が作ったものなので、「定義され得る以前に実存している存在」という言葉は的を射ているんだと思いました。<br/>
+どんな「概念」も、所詮は人間が作ったものなので、<br/>
+「定義され得る以前に実存している存在」という言葉は的を射ているんだと思いました。<br/>
 自分の存在証明って自分でするものじゃないのかな、とふと思いましたね。だって自分の顔も一生わからないんですよ。<br/>
 何かに写された自分の顔だけ知っていても仕方ないんです、写しは「本質」とやらにはなれないから。<br/>
 そういう意味では、自分の存在の定義ってどう足掻いても他人がしてしまうのかも知れません。<br/>
@@ -6265,8 +6282,9 @@ Is there really never meaning to ESCAPADE?<br/>
 実際当たらなければ何も解らない。故に一度の機会を掴まなければいけなかった。<br/>
 タイミングは実に大事だった。<br/>
 同じものは存在し得ないということを、私はその時理解した。<br/>
-自分の拙い唄も、絵も、息さえも一つ一つ違っていた。自分で自分を真似しても同じ自分にはならないし、なれない。知っていたか。
-かと言ってそれが如何したかっていうと、別段如何もしてなくて、ただ、今此処に居る手前だけこそが自分なのだと、認識しておかないといけないのだ。<br/>
+自分の拙い唄も、絵も、息さえも一つ一つ違っていた。自分で自分を真似しても同じ自分にはならないし、なれない。知っていたか。<br/>
+かと言ってそれが如何したかっていうと、別段如何もしてなくて、<br/>
+ただ、今此処に居る手前だけこそが自分なのだと、認識しておかないといけないのだ。<br/>
 他人に押し付ける必要もない。自分に、釘を刺しておかないといけないのだ。<br/>
 何時勝手に消えてしまうか、浮いてしまうかわかったものじゃない。<br/>
 そうやって消えてしまっても所詮私は私で、その他のナニモノにもなれないのさ。<br/>
@@ -6527,7 +6545,9 @@ All of these fruited by you<br/>
 私たちは大人になっているなんて一度も自覚できたことがなかったの。<br/>
 ただ、大人という値札が付けられているだけの、君たちと同じ幼稚で稚拙な人間なの。<br/>
 自分だけの道を切り拓いて進む人がどれだけ素敵に見えるか、とてもよくわかるわ。<br/>
-憧れであって、眩しすぎて、真似したくなって、自分だって自分だけの道を進まないと自分が自分じゃなくなるのではないか？とか、その他にもいろいろ感じることがいっぱいあるでしょう。<br/>
+憧れであって、眩しすぎて、真似したくなって、<br/>
+自分だって自分だけの道を進まないと自分が自分じゃなくなるのではないか？とか、<br/>
+その他にもいろいろ感じることがいっぱいあるでしょう。<br/>
 <br/>
 もちろん君たちにできないことなんてないわ。<br/>
 なら、身の回りの全てを敵に回す覚悟はできているつもり？<br/>
@@ -6930,7 +6950,8 @@ All of these fruited by you<br/>
 그만큼 가까운 거리에 있어서, 닿고 있을 수 있다면, 말하지 않은 많은 것을 알아갈 수 있을 거야. 내가.<br/>
 <br/>
 438<br/>
-치밀어 오르는 토기에 무작정 뛰쳐나와 눈비 섞여 지저분해진 일대를 달려 절벽 바로 위까지 다다랐을 때, 가슴 안에서부터 뱉어낸 것은 끔찍하게 비쩍 마른 비명소리였다.<br/>
+치밀어 오르는 토기에 무작정 뛰쳐나와 눈비 섞여 지저분해진 일대를 달려 절벽 바로 위까지 다다랐을 때, <br/>
+가슴 안에서부터 뱉어낸 것은 끔찍하게 비쩍 마른 비명소리였다.<br/>
 표현할 방도를 모르는 뒤엉킨 감정들이라는 걸 알고 있다.<br/>
 다만, 그뿐이다.<br/>
 <br/>
