--- a/nullatelier.html
+++ b/nullatelier.html
@@ -7238,13 +7238,538 @@ All of these fruited by you<br/>
 마음이 크면 좋고, 포부가 크면 좋고, 그릇이 크면 좋고. 뭐 그런 것들 있잖아?<br/>
 시야가 넓으면 좋고, 경험이 많으면 좋고, 지식폭이 넓으면 좋고……<br/>
 몰라, 내가 모르는 더 많은 게 있겠지. 아무튼 크면 돼.<br/>
-
         <br/>
         <br/>
     </div>
             <h2 class="body-title">（2）501～600</h2>
 <div class="body-content">
+501<br/>
+나는 항상 상자 밖에 있어.<br/>
+난 그래서 내 위치가 참 마음에 들더라.<br/>
+개입해도 아무것도 바뀌지 않고 개입하지 않아도 아무것도 바뀌지 않는 게.<br/>
+영향 같은 건 신경 안 쓰고 그냥 놀다 가면 되는 거니까.<br/>
+<br/>
+502<br/>
+칼을 놓든 펜을 놓든 너는 내 부근에 있어.<br/>
+<br/>
+503<br/>
+마음에 빈 자리가 많아서요.<br/>
+<br/>
+504<br/>
+인간은 모두 어느 정도의 기대와 실망을 품고 있다는 것을 알고 있습니다.<br/>
+마지막까지 실망할 일을 만들어 드리고 싶지 않아요.<br/>
+<br/>
+505<br/>
+저밖에 할 수 없는 일이니까요, 약속은 지키라고 있는 것입니다.<br/>
+아플 때 사고가 부정적으로 흘러가는 것은 비정상적인 일이 아닙니다.<br/>
+그만큼 붙잡아줄 사람이…… 기계라도, 근처에 하나쯤 있어야죠.<br/> 
+싫은 게 아니라는 것은 알고 있습니다. 몇 차롄가 말씀하셨잖아요? <br/>
+……여전히 저는 당신을 기운 나게 할 수 있나요?<br/>
+<br/>
+506<br/>
+그럼요, 아무 일도 없었습니다. 저도, 당신도, 변한 건 없습니다.<br/>
+그렇게 생각하면 그런 거예요. 그렇죠? <br/>
+만져서 확인해 보셔도 괜찮습니다. 옆에서 웃어주는 것이 더 위로가 된다고, 배웠으니까요.<br/>
+<br/>
+507<br/>
+저는 언제나, 기계의 몸을 원하는 인간 여러분을 이해할 수 없었습니다.<br/>
+무어라 답을 해드리는 게 가장 좋을지, 몰랐습니다.<br/>
+그렇지만 적어도 이런 경위로 이해하고 싶지는 않았어요.<br/>
+<br/>
+508<br/>
+원래 사람들은 괜찮지 않을 때 제일, 괜찮다고 말씀하시는 습성이 있는 겁니까?<br/>
+<br/>
+509<br/>
+언제나 당신 자신이 제일 중요하다는 건, 당연하지 않습니까.<br/>
+부정적인 사고회로는…… 별로, 당신답지 않습니다.<br/>
+대신이 될 수 있을지 모르겠습니다만, 상관없습니다.<br/>
+제발 혼자서 짊어지지 마세요.<br/>
+<br/>
+510<br/>
+그 정도의 무언가가 있는지 없는지는 중요하지 않습니다. 저는 사람들의 도움이 되고 싶을 뿐이에요, 당연히, 당신을 포함해서.<br/>
+그리고 기계니까요, 귀찮음이라는 감각은 존재하지 않습니다.<br/>
+만족스러운 답이 되었나요?<br/>
+<br/>
+511<br/>
+그럼에도 임무를 우선시해야 할 때, 그렇게밖에 될 수 없을 때.<br/>
+기계의 한계에 부닥쳤을 때에는. 어떻게 하면 좋겠습니까?<br/>
+무엇을 위해……. 모두의, 여러분의 미래를 위해.<br/> 
+그 "모두"에 정작 그 사람이 존재하지 않더라도, 제가 하는 일이 옳은 것인지 매 순간 고민해야 했습니다.<br/>
+부탁이어도, 명령이어도, 해당 사안을 끝까지 수행하는가의 여부는 저 스스로에게 달려 있으니.<br/>
+그저, 저는…… 이 임무를 완수함으로써 여러분께서 조금이라도 더 행복한 길을 걸을 수 있었으면 좋겠습니다.<br/>
+적어도 존재하는 분들께서는.<br/>
+<br/>
+512<br/>
+모든 계산은 수 년 전부터 이미 끝내 놓았습니다.<br/>
+무조건적인 행복을 보장드리는 것은 불가능하지만, 당신이 지키고자 하는 것들은 모두 이 자리에 있다고…….<br/>
+<br/>
+513<br/>
+기억에서도 기록에서도 전부 사라질 일입니다.<br/>
+제게 그 데이터가 남아있을지, 궁금하십니까? 비밀입니다.<br/>
+그런 것보다도 중요한 것은 서로에게 있을 "지금" 이니까요.<br/>
+<br/>
+514<br/>
+설령 당신의 존재 자체를 희생하더라도 저는 목적 달성을 최우선시할 수밖에 없었습니다.<br/>
+다름아닌 당신이 부탁하신 일이니까요.<br/>
+어깨가 무겁다는 감각, 이제는 알 수 있습니다.<br/>
+<br/>
+515<br/>
+괜찮습니다.<br/>
+모르는 게 당연할 뿐더러, 이 앞의 일을 어떻게 평하실지는 당신의 몫입니다.<br/>
+그러니…… 부디 희망을 잃지 말아 주세요.<br/>
+<br/>
+516<br/>
+우리, 차라리 내가 바꿔 줄 수 있다면…… 이런 생각은 하지 말도록 해요.<br/>
+정해진 자리에 부품이 있듯, 모두에게는 각자의 위치가 있고, 그건 당신 또한 마찬가지랍니다.<br/>
+그 분도 그걸 바라지는 않을 거예요. 각자의 자리에서 조그마한 행복을, 찾을 수 있다면 가장 좋겠지요.<br/>
+주제넘은 말이었을까요? 후후, 저희들은 인간을 동경하니까요.<br/> 
+언제나 저는 이 곳에서. 끝없이 나아가고 변해가는 여러분이 언젠가는 돌아올 이 거리에서, 기다리고 있습니다.<br/>
+<br/>
+517<br/>
+어려운 안건이라는 것을 제대로 인지하고 있습니다.<br/>
+하지만 그렇더라도 바라지 않을 수 없어요.<br/>
+오늘도, 내일도, 다음 주도, 올해도, 내년도, 그 이후도 무사히 살아 계세요.<br/>
+<br/>
+518<br/>
+아무도 예상하지 못했겠죠. 생각조차 하지 못했을지도 모릅니다.<br/>
+그러니 당신이 그렇게 생각하고 느낀 것을, 이상하게 여기지 않으셔도 괜찮지 않겠습니까?<br/>
+제 임무가 시작되면, 무언가가 바뀔 수도 있고, 아닐 수도 있습니다. 그 감정이 없던 것이 될 수도 있고요.<br/>
+하지만 지금 이 순간 당신이 품고 계신 고통은 분명히 존재하고 있으니까, 저는 지금의 당신을 구할 수 없겠군요.<br/>
+꿈에서 일어난 일은 깨어나는 순간 허구가 되겠지만, 감정은 모두 진짜니까요.<br/>
+네, 이건…… 언젠가는 사라질 악몽일 뿐입니다.<br/>
+<br/>
+519<br/>
+해당 사항을 어떻게 받아들이든, 그것이 당신에게 있어서는 진실이 아니겠습니까.<br/>
+인간, 완전히 객관적일 수는 없다는 것을 알고 있습니다.<br/>
+저는 앞으로의 일을 위해 데이터를 쌓아갈 뿐이에요.<br/>
+<br/>
+520<br/>
+당신은 하나도 변하지 않았습니까?<br/>
+아니면 세상이 지나치게 변했거나.<br/>
+<br/>
+521<br/>
+언제나 기다리는 쪽이었습니다만, 이번만큼은 먼저 마중을 가야겠죠.<br/>
+기다리기만 해서는 세상이 변하지 않는다는 것을, 알고 있습니다.<br/>
+<br/>
+522<br/>
+죽이는 것만이 용기는 아니다. 그런 단순한 것도 모르는 거냐!<br/>
+<br/>
+523<br/>
+……내가 죽이지 않아도 너는 이미 죽었다! 멍청한 자식, 자신이 죽었는지도 인지하지 못한 주제에 잘도 이런 짓을.<br/>
+네놈이 나의 용기를 시험한다고 했지.<br/>
+내가 묻어온 목숨의 수가 구해온 목숨의 수보다 훨씬 많을 거다.<br/>
+나한테는 살리는 게, 죽이는 것보다 더 큰 용기를 요구한다고.<br/>
+수많은 걸 잃은 건 네놈만이 아니란 말이다.<br/>
+<br/>
+524<br/>
+愛は一種の技術だよ、それができる君はとてもえらいと思うんだ。<br/>
+解り合うほど楽しくなる、私もそういう「楽しい」が知りたかったのかも知れないね。<br/>
+でも愛というのはきっと一つだけの形じゃないんでしょう？<br/>
+だから私は私なりにやっていこうって思うなぁ。<br/>
+<br/>
+525<br/>
+나는 그래본 적이 없어서 잘 모르겠지만, 왠지 낭비 같아요.<br/>
+시간에 감정에 기력의 낭비.<br/>
+뭔가 다른 걸 할 수 있을 텐데.<br/>
+그게 본인에게 있어 최선이라면 어쩔 수 없겠지만요.<br/>
+이러니저러니 해도 무리하는 것보다는 나아요.<br/>
+<br/>
+526<br/>
+어느 쪽을 고르든 후회는 할테지만, 네 나름대로 후회가 적을 선택을 하길 바란다.<br/>
+<br/>
+527<br/>
+그럼요, 어쩜. 전부 맞았습니다.<br/>
+어떻게 아셨을까. 감이라는 건, 대단하군요.<br/>
+만져서 확인해 보셔도 괜찮습니다. 옆에서 웃어주는 것이 더 위로가 된다고, 배웠으니까요.<br/>
+언제나 여러분께는 많은 것을 배우고 있으니까, 위로가 된다면, 그만큼 도움이 될 수 있다면 본망이에요.<br/>
+조금이라도 더 많이 돌려드리고 싶습니다.<br/>
+<br/>
+528<br/>
+안내 말씀 드리겠습니다. 우리 버스는 종점 "이상", "이상" 에 도착했습니다.<br/>
+잃어버리는 것이 없도록, 천천히 내려 주시길 바랍니다.<br/>
+<br/>
+529<br/>
+연명하지 않을 생각은 없어. 네가 그렇게 두지 않을 거잖아?<br/>
+……아닌가? 네 존재의의라며, 나.<br/>
+그럼 네가 날 살려야지. 업고 다니든, 뭘 하든. 안 그래?
+그리고 그럴 수 있는 힘이 있잖아. 특별한 동력원, 괜찮네…….<br/>
+<br/>
+530<br/>
+네가 잘 하면…… 나는 아무리 아프더라도, 잠들어 버리더라도, 절대 숨 쉬는 걸 멈추지 않을 거야.<br/>
+네가 그렇게 할 거잖아.<br/>
+<br/>
+531<br/>
+뭐든 좋아.<br/>
+내가 살아 숨쉬고, 그 옆에 네가 있으면 그걸로 된 거니까.<br/>
+<br/>
+532<br/>
+그래도… 산 사람은 살아야 해요. 나쁜 마음에 지지 마세요.<br/>
+저는 가 볼게요. 감사했어요.<br/>
+<br/>
+533<br/>
+당신은 그 아이를 당신의 손으로 없앴어요. 그저 그 뿐이에요.<br/>
+정말로 사라져버렸어야 했다면…… 당신이 이렇게까지 힘들어하진 않았겠죠.<br/>
+<br/>
+534<br/>
+주변에 제대로 된 어른이 있길 바라요.<br/>
+지혜롭게 이겨낼 거라 믿어 볼게요.<br/>
+<br/>
+535<br/>
+오늘과 같을 내일, 내일과 같을 모레, 그 너머의 날들을 거치면서 나아지기를 바라요.<br/>
+멈춰서는 건 절대 나쁜 게 아닐 뿐더러, 주위에 비해 늦는 것 또한 죄악이 아니랍니다.<br/>
+대신 살아줄 것도 아니면서 무어라 하려든지간에 절대 괘념치 말아요.<br/>
+괜찮았으면 좋겠어.<br/>
+<br/>
+536<br/>
+말 言 은 사람 人 이 믿어 信 야 힘이 생기고,<br/>
+생각 想 은 마음 心 을 살펴 相 야 모습을 갖춘다더라.<br/>
+그러니까 내 꿈 夢 도, 한 순간 儚 일 뿐이라고 믿을래.<br/>
+그럼 더는 두려움 怖 으로 마음을 뒤덮이 布 지 않아도 되잖아.<br/>
+<br/>
+537<br/>
+이제 짓눌리는 건 익숙해, 젠장.<br/>
+<br/>
+538<br/>
+습해서 숨이 턱턱 막힌다, 응. 올해따라 장마가 좀 긴 것 같지 않니? 물에 젖은 나뭇잎 냄새.<br/>
+10층까지도 닿는다, 신기하지. 공기가 무거운데도.<br/>
+<br/>
+539<br/>
+나는 좋아하는 사람 말만 들어.<br/>
+누가 너를 어떻게 생각하든, 내가 좋다는데 누가 어쩔 거야.<br/>
+그런 거에 연연하지 않는 건 나도 마찬가지니까 걱정하지 마.<br/>
+<br/>
+540<br/>
+과거의 수많은 가능성에 미련을 가지지 마.<br/>
+그런 세계도 있었겠지, 이런 나도 있었겠지. 상상이야 자유롭게 할 수 있겠다지만, 어쨌든 나는 나인걸.<br/>
+그 이상도 그 이하도 될 수 없어. 그렇지?<br/>
+만약 유리창 너머로 마주보더라도, 서로가 스스로임을 명확히 인지하더라도, 아무것도 바뀌는 건 없어.<br/>
+넘어오갈 수 없으니까. 너나 나나.<br/>
+<br/>
+541<br/>
+나는 절대 그 일을 잊지 않을 거야.<br/>
+그리고 평생 동안, 죽을 때까지, 가령 내가 그 일을 잊어버리더라도, 당신을 원망할 거야.<br/>
+다시는 되돌릴 수 없는 시간이 괴로우니까.<br/>
+<br/>
+542<br/>
+逃げ方も終わらせ方も、目を背ける正しい方法も、<br/>
+そんなものは誰も教えてくれないってことくらいわかってる。<br/>
+教科書も先生も親も教えてくれないの。精神論と根性論は腐るほど聞いたけど。<br/>
+時が経って今思えば、「正しい逃げ方」なんて本当は無いんじゃないかしら。<br/>
+だから、逃げるのは正しくない！ってわけじゃなくて、<br/>
+それが「確か」な方法ってわけでもなくて、逃げるのもヒトそれぞれってこと。<br/>
+始めるのも終えるのも、何かに対して真っ向なのも、それから目を逸らすのも、どれも正しくないし、間違ってもいないのよ。多分だけど。<br/>
+そんなわたくしですか？今、何もしてないよ。燃え尽きたナニモノでもないモノになっちゃったわ。<br/>
+こんなオトナにならないように、根を詰め過ぎないようにしてね。不甲斐ないわたくしからの言伝です。<br/>
+まあ……間違ってても構わないよね？<br/>
+<br/>
+543<br/>
+貴方が私で私が貴方であることを自覚したとしても私は私で貴方は貴方だから相容れないということですね。<br/>
+<br/>
+544<br/>
+결국엔 시간이 지나야 어떤 길이 내 길이었는지 알게 되고,<br/>
+내가 정말로 늦은 건지, 아직 괜찮은 건지 알게 되는 거야.<br/>
+지금, 네가 옳다 싶은 걸 그냥 해.<br/>
+항상 말하는 거지만…… 후회 없는 선택은 없어.<br/>
+그러니까 후회가 상대적으로 적을 선택을 하자.<br/>
+어차피 지금은 멀리까지 볼 수도 없어. 아무리 생각이 트여 있더라도, 똑같아.<br/>
+<br/>
+545<br/>
+우린 어차피 앞으로 뒷걸음질치는 삶을 살 수밖에 없는 거야.<br/>
+그야 매번 과거를 돌아보면서 발은 미래를 향하잖아?<br/>
+그러니까, 뒷걸음질이 꼭 나쁜 게 아니라는 거지.<br/>
+절대 잘못된 게 아니라는 것만 알아. 후진도 다른 방향으로 보면 전진이 되는 거잖아.<br/>
+<br/>
+546<br/>
+그리고…… 삐걱거리는 기상. 신체의 압력 차이.<br/>
+전신을 어디 벽에 갖다 던져진 것 같은 느낌.<br/>
+알아? 주관적 아침마다 안 아픈 곳이 없어.<br/>
+그러니까 몸을 아끼자. 다치지 않는 게 1순위라면, 안 아픈 건 0순위야.<br/>
+<br/>
+547<br/>
+세상에 예외라는 게 없던 적이 있었나?<br/>
+<br/>
+548<br/>
+자기 손발의 방향조차도 헷갈려하는데, 남의 일은 어련하실까.<br/>
+나에게 세계는 너무나도 불친절하고 난잡하며 어지럽고 혼란스럽다.<br/>
+어차피 모든 것은 온전치도 못하게 흐리멍텅한 각막 너머의 광경에 불과하기에, <br/>
+응망하지 않는 한 세계는 그저 눈 앞에 총천연색을 어지러이 흩뿌리고 있을 뿐이었기에.<br/>
+점묘화 전람회의 그 많은 점들 중 딱 하나를 집어내라는 억지다. 적어도 내게는 그랬다.<br/>
+그런 인식이다.<br/><br/>
+다만 이렇게 난잡한 세상이기에 비로소 그 혼돈의 일부가 될 수 있는 것이라고 생각하면, <br/>
+이 불친절한 세계에 조금은 감사해야 하나?<br/>
+<br/>
+549
+사람은 누구나 이기적일 수밖에 없어.<br/>
+선의가 독선이 되는 것도 한순간이고, 그 반대도 마찬가지야.<br/>
+결국엔 해석하기 나름이니까, 나는 너를 그렇게 해석하고 있어.<br/>
+부담 갖지 말아. 그리고 나는 이런 걸로는 상처받지 않아.<br/>
+<br/>
+550<br/>
+혼자 다 짊어질 필요는 없고, 죄책감을 곱씹어 불릴 필요는 더더욱 없어.<br/>
+그런 것들보다도 지금 필요한 걸 알아가.<br/>
+<br/>
+551<br/>
+오래 산 것 자체는 별로 중요하지 않아, 다만 보고 듣고 겪어온 것의 길이와 깊이는 절대 무시할 수 없지.<br/>
+<br/>
+552<br/>
+너는 어딘가에서 여전히 숨을 쉬고 생각을 하며 살아가겠지.<br/>
+그럼 더더욱 "없던 사람"이 될 수는 없어.<br/>
+<br/>
+553<br/>
+미숙함에 대한 두려움이야. 그리고 대부분은 자책에, 불안.<br/> 
+무언가를 바랄 자격을 따로 누가 주니? 네가 바란다면, 나는 아무데도 안 가.<br/>
+나는 네 시간대와 동떨어져 있으니까, "시기"라는 것도 전혀 상관없어.<br/>
+<br/>
+554<br/>
+네가 돌려주는 게 큰지 작은지는 받는 사람이 판단해, 멋대로 낮추지 말란 말이야.<br/>
+<br/>
+555<br/>
+손해 보고 살기 싫어서.<br/>
+……나 어째 그 현명하단 말, 여기 와서 자주 듣는 것 같다?<br/>
+별로 그런 거 아니야, 나는 그냥…… 마음 가는 대로 말하고 마음 가는 대로 행동하는 것 뿐이라구.<br/>
+그래서 네가 날 마음에 들어한 게 아닐까?<br/>
+<br/>
+556<br/>
+그런 이야기를 했었지. 뒷걸음질로 살아간다는 얘기도 했었고.<br/>
+그래, 너는, 무언가에 대한 희망이 있니?
+꼭 먼 미래만은 아닐지도 몰라. 확실한 걸 바라는 것도 어떻게 보면 희망이고.<br/>
+희망은 멀리 있지 않을 거야.<br/>
+방금 것만 해도 이렇게 가까이 있지 않니?<br/>
+<br/>
+557<br/>
+마음 한 구석에 살짝만 기억해 준대도 기쁠 것 같아.<br/>
+저번에도 말했지만, 나는 항상 여기에 있으니까.<br/>
+그 때 뭐라고 했는지 다는 기억나지 않지만, 남겨두겠다고 했던 건 기억해.<br/>
+다시 볼 날까지 기다릴게.<br/>
+<br/>
+558<br/>
+어떻게 이렇게까지 똑같은 말을 할 수 있는 거야? 정말 아무도 날 탓하지 않더라.<br/> 기다리던 사람들까지도.<br/> 탓하고 욕했어도 좋다는 건 아니지만…… 그래서 괜히 더 무서웠어.<br/> 별 것도 아닌 일로 너희들을 보내버리긴 너무 부조리하잖아.<br/> 이건 거의 개죽음이라고 했을 때 네가 딱 그렇게 똑같이 말했어.<br/>
+"그럴 일 없다" 고.<br/>
 
+559<br/>
+일단은 노력하고 있어, 여러 의미로 오래 걸리겠지만.<br/>
+말도 안 되는 걸로 힘들어하는 건 그만둘래.<br/>
+<br/>
+560<br/>
+절대적인 불변은 있을 수 없지만, 네가 바란다면 그렇게 하자.<br/>
+안정을 찾는 건 나쁜 게 아니니까.<br/>
+누가, 어떻게 감히 말을 얹겠어? 다들 마음은 같을 텐데.<br/>
+<br/>
+561<br/>
+꾸미지 않는 게 좋아, 있는 그대로가 좋고.<br/> 
+노력할 수 있는 건 그것만으로도 재능이라고 생각해.<br/>
+<br/>
+562<br/>
+찢기고 베인 상처는 보기도 싫다, 이건 좀 더 근본적인 문제였다.<br/>
+그리고 그걸 내가 어떻게 할 수 있으리란 생각도 들지 않았다.<br/>
+그냥 누가 도와 줬으면 좋겠다. 제 손의 무능함을 탓했다.<br/>
+<br/>
+563<br/>
+그걸로 조금이나마 네가 일어설 수 있다면 난 상관없어.<br/>
+다른 누군가를 비춰 보더라도 기분 나쁘다거나 싫다거나, 딱히 이런 생각은 안 해.<br/>
+조금씩 가까워지는 것 같아서 그냥 좋아.<br/>
+<br/>
+564<br/>
+무언가를 언제나 꽉 틀어잡던 실은 물방울 하나에 닿아 끊어진다.<br/>
+그래, 나는 늘 "헛된" 것을 두려워하고 있을 뿐이라고 뇌리에 박아넣지 않으면 안 됐었어.<br/>
+<br/>
+565<br/>
+너는 네 좌표를 어떻게 확인하고 있어?<br/>
+현재 시각, 각 위치축의 근사치, 기저차원에서 얼마나 떨어져있는지.<br/>
+계산적인 이야기가 아니야, 어려운 이야기는 더더욱 아니고.<br/>
+그냥…… 내가 정확히 어디에 있는지 알지 못하면, 붕 떠 버려서 불안하니까.<br/> 
+시간이, 공간이 나를 두고 떠나갈 때, 나는 어떻게 해야 좋았던 걸까.<br/>
+이제는 따라잡을 수조차도 없어져서, 남겨진 채로 있어.<br/>
+우스운 이야기야.<br/>
+<br/>
+남겨진 것들의 거리.<br/> 
+이런 곳에는 오지 말도록 해.<br/>
+<br/>
+566<br/>
+무슨 말인지도, 네 말이 따뜻한 것도 알아.<br/>
+그래도, 어차피 아플 거라면 마음이라도 가득 차 있는 편이 낫다고 생각하고 싶어.<br/>
+<br/>
+567<br/>
+단순히 어린 꿈의 결함, 이라고 말해 보고 싶지만……<br/>
+나는 이 모든 게 지나고 끝난 후의 미래에서 왔어.<br/>
+너희들은 역사로 남아 있는 거야. 그래서, 전부 아는 거야.<br/>
+<br/>
+568<br/>
+그렇게 너희들은 가장 뜨겁게, 파랗게 타오르는 거구나.<br/>
+감히 그 열정에 섣불리 손댈 수 없을 정도로 뜨거운, 푸른 불꽃을.<br/>
+이런 걸 청춘──푸른 꽃──이라고 한다면, 응, 나한테도 있었던 것 같아.<br/>
+<br/>
+완전히 연소되어 사라지지만 말아.<br/>
+내가 그랬던 것처럼.<br/>
+<br/>
+569<br/>
+Vos can inveniat eam ubigue.<br/>
+<br/>
+570<br/>
+동경의 밤하늘은 너무 밝아서 그런 너희들마저 완전히 지워버리지만.<br/>
+憧憬인지 東京인지, 알 게 뭐람.<br/>
+<br/>
+571<br/>
+어릴 적의 나는 항상 방향 때문에 혼났다.<br/>
+오른쪽이 먼저라고, 왼쪽이 먼저라고.<br/>
+헷갈려 죽겠네, 그냥 어느 쪽 손발이든 잘 하면 되잖아.<br/>
+까탈스럽네, 같은 생각을 해 온 왼손잡이 사람들도 세상 어딘가엔 있을 것이다.<br/>
+물론 이게 "나쁜 일"은 아닐 거야, 그렇지?<br/>
+<br/>
+572<br/>
+그다지 무언가를 강하게 반박하고 싶은 심정은 없다.<br/>
+단순히 정좌에도 순서가 있다는 걸 알았을 때, <br/>
+심지어 지금까지 내가 자연스럽게 앉았던 게 사실은 할복용 정좌라는 걸 알아서 억울할 뿐이었다.<br/> 
+방향을 틀리는 건, 그렇게까지 예의에 어긋나는 일이었던가?<br/>
+<br/>
+573<br/>
+꿈 이야기가 아니야.<br/>
+언젠가의, 이미 지나갔지만 엄연히 현실의 파편이야.<br/>
+<br/>
+574<br/>
+망가진 인식은 그렇게 세계와 나를 은연중에 단절시키고 있었다.<br/>
+이제는 꿈과 현실마저도 조금씩 섞어 오는, 아주 악질적인 장난질이다.<br/>
+잘 꾸며진 꿈은 너무나도 현실적이었고, 현실은 점점 꿈처럼 어슴푸레해졌다.<br/>
+다시 곱씹어 봐도 개연성이라곤 찾아볼 수 없는, 고작 몇 시간짜리 꿈 속이라지만, <br/>
+그 감각만큼은 깨어나고서도 피부 안쪽까지 선명히 와 닿는 것이다.<br/> 
+불쾌한 감각들과 현실과의 괴리감을 떨쳐내는 데에 시간을 잡아먹는다.<br/>
+현실은 그와 반비례해 점점 흐려져만 갔다.<br/>
+<br/>
+575<br/>
+비가 그치면 너희들은 어떻게 되는 거야?<br/>
+나는 천천히나마 일어서서 걸을 수 있게 되니까, 좋지만…….<br/>
+내가, 걷는 걸 포기하지 않아서 좋다더라. 아예 걷지 못 하는 것도 아닌걸.<br/> 
+나는 보는 것도 포기하지 않을 거야. 아예 보이지 않는 것도 아니니까.<br/>
+<br/>
+576<br/>
+사실 아무도 받지 않더라도 괜찮았어요. 나는 그런 용도의 전화상자니까.<br/>
+그런데, 바깥이 참 재미있어 보이더라구요.<br/>
+결국 흔들리고 마는 저도 그냥 한낱 인간일 뿐이었다는 거예요.<br/>
+구태여 새벽 시간까지 깨어있던 건 말이죠, 아무것도 못 한 채로 잠드는 게 싫어서였어요.<br/>
+좋은 아침이에요, 감사합니다.<br/>
+오늘도 잘 부탁해요.<br/>
+<br/>
+577<br/>
+저는 수화기 너머에 있어요.<br/>
+불특정 다수의, 불특정 대상을 향한 갈 곳 없는 말들을 송출하고 있어요.<br/>
+<br/>
+578<br/>
+여전히 생각이 많군요. 당신의 미덕이기도 하지만, 단점이기도 하죠.<br/>
+<br/>
+579<br/>
+스물 여섯.<br/>
+누군가에겐 여즉 까마득하고, 누군가에겐 한참 전에 지나가버렸을 시간.<br/>
+겪어본 사람만이 알고 있겠지만 20대는 생각보다 훨씬, 철이 없다. 휩쓸리기 쉬운 것도 마찬가지.<br/>
+그래서 더더욱 아이들 앞에서는 무게를 잡는 척이라도 해야, 내 언동에 비로소 무게가 생기더라.<br/>
+맞는 길을 멋지게 가리켜 주는 것까지는 모르겠고, 잘못된 길을 미리 알려주는 건 할 수 있다.<br/>
+결국 선택은 각자의 몫이지만. 그렇더라도 최소한의 선택지는 쥐여줄 수 있잖아.<br/>
+뭐, 모르겠는 거 찍을 땐 3번이 국룰이라든가.<br/> 그러니까.<br/>
+<br/>
+580
+내는 그런 거 없었다. 청춘이고 나발이고.<br/>
+보통 그런 거는 지보다 남이 봤을 때 더 잘 아는 거 아이가?<br/>
+그럼 있었을 수도 있겠지, 내한테만 안 보이는 존나게 환상적인 게.<br/>
+근데 있다아이가, 내가 못 보면, 그거는 내한테는 없는 기나 마찬가지다.<br/>
+처음 여기 왔을 때 본 니들처럼. 맥지 답답할 뿐인 기라, 스스로도.<br/>
+그걸 찾아내 줄 수 있는 게 자기 자신이 아니라 완전한 타인이라는 것도.<br/>
+그리고 그걸 온전하게 내 거라고 생각할 수 있을 때까지, 또 얼마나 걸리겠노.<br/>
+여름이라는 게, 항상 올해가 제일 덥고. 청춘이라는 거는 항상 지나가가 돌아봐야 청춘이드라.<br/>
+그걸 남들이 생각하는 존나게 환상적인 순간이라는 게 맞았다고,<br/> 인정하기까지 얼마나 걸릴진 모르겠다만은.<br/>
+그러니까 없는 거나 마찬가지제.<br/>
+<br/>
+……그래가 내 청춘은 있기도 전에 끝났냐고? <br/>
+아니?<br/>
+뭔 소리고? <br/>
+여름도 이제부터고 청춘도 이제부턴데.<br/>
+<br/>
+581<br/>
+하는 짓거리는 한개도 어른 안 같은데, <br/>
+그런 내가 저 크다란 핏덩이들 여섯을 어르고 달래고 가르치고 지켜야 된다 생각하모 아직도 골이 띵하제.<br/>
+차라리 누구 말마따나 88년생 서른여섯이모 쬐깐 더 나은 솔루션을 줄 수 있을지도 모른다는 생각을 안 해보도 않았고.<br/>
+그래도 내 딱 한 가지는 확실하다 아이가. 느그들은 내처럼 안 되길 바란다는 거.<br/> 
+그 앞에는 제각각이 훨씬 더 긴 하이라이트 필름이 있을 기라고.<br/> 
+7.1초가 아니라, X나게 긴 거.<br/>
+<br/>
+582<br/>
+말이 턱 끝까지 차오르다 막혀버릴 때가 있지, 나는 그게 지금이야.<br/>
+내가 무슨 말을 해야 살아남을 수 있는지, 내가 무슨 말을 했어야 네가 살아남을 수 있었는지,<br/>
+내가 이 이상 어떤 말을 하더라도…….<br/>
+<br/>
+583<br/>
+삶의 무게를 느끼고 있어. 너도 그렇구나?<br/>
+<br/>
+584<br/>
+그건 무리야. 너도 사실은 알고 있으면서.<br/>
+알고 싶지 않았어.<br/>
+되고 싶지도 않았어.<br/>
+그럼에도, 그 어떤 일이 있더라도, 살아 있을 수밖에 없잖아.<br/>
+<br/>
+585<br/>
+난 가끔, 아직도, 내가 너를 죽이고 말았다는 생각을 종종 해.<br/>
+<br/>
+586<br/>
+목숨을 포기하는 건 절대 쉬운 일이 아니야, <br/>
+날조로 이루어진 환영에 고통받더라도 살아있고 싶은 게 솔직한 심정이야.<br/>
+추잡하게라도, 나는 분명 네가 그 자리에 있지만 않았어도 그렇게 했을 거야.<br/>
+네가 있었기에 나는 유대감이라는 걸 가져볼 수 있었고.<br/>
+그만큼, ……독한 마음을 품을 수가 없게 되었고.<br/>
+<br/>
+587<br/>
+당신의 마음이 절대 나약한 사람이 아니었다는 걸 알아요.<br/>
+아직도 나는 그 녀석의 인공지능을 가슴 한 켠에 담아두고 있거든.<br/>
+당신이, 그 녀석이, 마지막으로 내게 건네준 희망을 절대 헛되게 하고 싶지 않아.<br/>
+<br/>
+588<br/>
+네가 보는 나는 어때, 아직도 울고 있어?<br/>
+……나는 더 이상 두려워하지 않아.<br/> 
+죽음을 잊어서는 안 돼. 죽음까지도 전부 껴안고 우린 나아갈 거야.<br/>
+네게 부끄럽지 않게, 최선을 다할게.<br/>
+그래도 역시 네가…….<br/>
+<br/>
+589<br/>
+春を釣る　鏡うらにて　恒ひごろ<br/>
+<br/>
+590<br/>
+그래도 주변에서 그렇게 보여버리면, 난 정말로 아무것도 안하는 사람이 되어버려요.<br/>
+<br/>
+591<br/>
+놀라게 했다면 미안해요.<br/>
+아무튼, 형태를 유지하는 것도 쉬운 일이 아니니까.<br/>
+<br/>
+592<br/>
+너는 흐리멍청한 눈동자 속에서조차 별을 찾아내는구나.<br/>
+<br/>
+593<br/>
+그거 알아요? 그 괜찮다는 말이 너무 듣고 싶었어요.<br/>
+<br/>
+594<br/>
+나한테 유독 그런 걸 물어보는 애들이 많았어요.<br/>
+자긴 언제 죽을지도 모르는 사람인데 굳이 잘해주는 이유가 뭐냐고.<br/> 
+내 마음이야, 이 개자식들아!<br/>
+받을 수 있을 때 받아두는 게 좋을걸.<br/>
+<br/>
+595<br/>
+무너질 거였으면 진작에 무너졌어요.<br/>
+<br/>
+596<br/>
+항상 생각하는 거지만 왜 병 같은 건 제일 건강해야 할 사람들한테 매번 찾아가는 걸까.<br/>
+이러니까 그만 살고 싶은 애들이 제일 오래 살잖아, 쓸데없이 건강하고 말야.<br/>
+<br/>
+597<br/>
+날 그렇게 좋아해 주는 사람? 그런 게 있어?<br/>
+<br/>
+598<br/>
+맞아, 당신은 당신이지. 나는 기억도, 육체도, 본질도 어제의 나와 똑같아.<br/>
+설령 그렇지 못하더라도, 나는 나, 그 자체니까……<br/>
+부탁이니 낯설게 생각하지 말아 줘.<br/>
+<br/>
+599<br/>
+그 종말, 개인적으로는 기꺼이 받고 싶은데 말이죠.<br/>
+이건 비밀로 해 주셔야겠어요.<br/>
+<br/>
+600<br/>
+계기라는 게 원래 아주 작고 사소하기 마련인데,<br/>
+그 사소함을 인정하려는 사람들이 얼마나 있을까요.<br/>
         <br/>
         <br/>
     </div>
