--- a/nullatelier.html
+++ b/nullatelier.html
@@ -7498,7 +7498,7 @@ All of these fruited by you<br/>
 다만 이렇게 난잡한 세상이기에 비로소 그 혼돈의 일부가 될 수 있는 것이라고 생각하면, <br/>
 이 불친절한 세계에 조금은 감사해야 하나?<br/>
 <br/>
-549
+549<br/>
 사람은 누구나 이기적일 수밖에 없어.<br/>
 선의가 독선이 되는 것도 한순간이고, 그 반대도 마찬가지야.<br/>
 결국엔 해석하기 나름이니까, 나는 너를 그렇게 해석하고 있어.<br/>
@@ -7532,7 +7532,8 @@ All of these fruited by you<br/>
 556<br/>
 그런 이야기를 했었지. 뒷걸음질로 살아간다는 얘기도 했었고.<br/>
 그래, 너는, 무언가에 대한 희망이 있니?
-꼭 먼 미래만은 아닐지도 몰라. 확실한 걸 바라는 것도 어떻게 보면 희망이고.<br/>
+꼭 먼 미래만은 아닐지도 몰라.<br/>
+확실한 걸 바라는 것도 어떻게 보면 희망이고.<br/>
 희망은 멀리 있지 않을 거야.<br/>
 방금 것만 해도 이렇게 가까이 있지 않니?<br/>
 <br/>
@@ -7543,9 +7544,12 @@ All of these fruited by you<br/>
 다시 볼 날까지 기다릴게.<br/>
 <br/>
 558<br/>
-어떻게 이렇게까지 똑같은 말을 할 수 있는 거야? 정말 아무도 날 탓하지 않더라.<br/> 기다리던 사람들까지도.<br/> 탓하고 욕했어도 좋다는 건 아니지만…… 그래서 괜히 더 무서웠어.<br/> 별 것도 아닌 일로 너희들을 보내버리긴 너무 부조리하잖아.<br/> 이건 거의 개죽음이라고 했을 때 네가 딱 그렇게 똑같이 말했어.<br/>
+어떻게 이렇게까지 똑같은 말을 할 수 있는 거야? 정말 아무도 날 탓하지 않더라. 기다리던 사람들까지도.<br/> 
+탓하고 욕했어도 좋다는 건 아니지만…… 그래서 괜히 더 무서웠어.<br/>
+별 것도 아닌 일로 너희들을 보내버리긴 너무 부조리하잖아.<br/>
+이건 거의 개죽음이라고 했을 때 네가 딱 그렇게 똑같이 말했어.<br/>
 "그럴 일 없다" 고.<br/>
-
+<br/>
 559<br/>
 일단은 노력하고 있어, 여러 의미로 오래 걸리겠지만.<br/>
 말도 안 되는 걸로 힘들어하는 건 그만둘래.<br/>
@@ -7665,7 +7669,7 @@ Vos can inveniat eam ubigue.<br/>
 결국 선택은 각자의 몫이지만. 그렇더라도 최소한의 선택지는 쥐여줄 수 있잖아.<br/>
 뭐, 모르겠는 거 찍을 땐 3번이 국룰이라든가.<br/> 그러니까.<br/>
 <br/>
-580
+580<br/>
 내는 그런 거 없었다. 청춘이고 나발이고.<br/>
 보통 그런 거는 지보다 남이 봤을 때 더 잘 아는 거 아이가?<br/>
 그럼 있었을 수도 있겠지, 내한테만 안 보이는 존나게 환상적인 게.<br/>
