--- a/internallink.html
+++ b/internallink.html
@@ -6,6 +6,7 @@
 ================================================================================<br>
 内部リンク集<br>
 ================================================================================<br>
+<br>
 <a href="https://hospinfo-enuei-city.org/">豎溽ｸｫ譬?ｸらｫ狗ｷ丞粋逞?劼1000蜿ｷ螳､</a><br>
 <a href="https://hospinfo-enuei-city.org/en-dex">546d39304c57526c5a6d6c756158526c62486b67525868706333526c626d4e6c【英語】</a><br>
 <a href="https://hospinfo-enuei-city.org/ko-dex">Ti9BIO2VtOuLuSDsl4bsnYw【韓国語】</a><br>
@@ -16,6 +17,17 @@
 <a href="https://hospinfo-enuei-city.org/notice404-k">江縫栄市立総合病院からのお知らせ（改正）【韓国語】</a><br>
 <br>
 <a href="https://hospinfo-enuei-city.org/insidemail55">セキュリティークリアランスを確認してください。</a><br>
+<br>
+<br>
+================================================================================<br>
+内側リンク集<br>
+================================================================================<br>
+<a href="https://www.youtube.com/watch?v=3Mq6FsF07z8">匿名N</a><br>
+<a href="https://www.youtube.com/watch?v=8kRCjrKjkRs">【1000号室より】1000年生きてる</a><br>
+<a href="https://www.youtube.com/watch?v=gCqlcIgzfnY">わたしは禁忌</a><br>
+<br>
+<a href="https://yukinotachimai.booth.pm">著作と合成音声</a><br>
+<a href="https://null-gaine.fanbox.cc">ふぁんぼっくす</a><br>
 <br>
 <br>
 ================================================================================<br>
