--- a/icu.html
+++ b/icu.html
@@ -5,34 +5,70 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>contained</title>
         <meta name="contained" content="noindex">
-        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script> 
-                               <script>
-$(function(){
-//content toggle
-$(".body-content").hide();
-$(".body-title").on("click", function(){
-$(this).next(".body-content").toggle();});
-});  
-
 <body>
-    <div id="div1">
-<h2 class="body-title"><strong>新しいメッセージが（１）通あります！</strong></h2>
-<div class="body-content">
+   <div id="div1">
+
+<strong>新しいメッセージが（１）通あります！</strong></br>
+    
+    </blockquote>
+    <button type="button" onclick="go()"> 確認する </button>
 
     <div id="innerdiv">
+ 
+これが公開されたら、私が自殺に成功したというのが既成事実になりますね。<br>
+もしよろしければ、日本の警察に通報と、私の家族に連絡するのを手伝ってください。<br>
+母の携帯電話番号は010-████-████です。<br>日本の警察は112ではなく110です。<br>
+<br>
+そしてこのメッセージを、正確には遺書を、家族に見せてほしいです。<br>
+<br>
+罪悪感は感じる必要がないということを、まず伝えておきたいの。<br>
+私はただ生きているのが苦手だった。<br>
+こんなことを書いている時点でそうでしょう。<br>
+「憂鬱な時大事な決定をするな」って言葉があるから、ずっと我慢したけど、<br>
+これ以上はもう耐えられない。<br>
+いつも私の精神病が家族のせいだかなんだか文句を垂らしてきたけど、<br>
+そんなのどうだっていい。<br>
+うちはきっと世界一の家族よ。<br>
+もちろん今更こうしたって無駄だってことを私は知っている。<br>
+私がいなかったように生きてほしいと言っても、それができるわけないよね？<br>
+全部わかってるから。思う存分ショック受けて、
+<br>思う存分私の最低な決定を罵っていいよ。<br><br>
 
-      <strong>特別収容プロトコル:</strong> SCP-CN-994の発生パターンが今もなお未確定なため、SCP-CN-994イベントに対する有効な予防策は未だ確立されていません。現在の収容プロトコルはオブジェクトがもたらす被害を緩和させることに重点が置かれています。新たに影響を受けた職員には毎週心理検査を実施するとともに、自殺兆候の有無を確認しなければなりません。必要があれば影響の減衰のため、記憶処理を実施してください。機動部隊-庚午-23（”不可視”）が影響を受けた職員を救護する目的で常時待機しています。SCP-CN-994の起源や発生頻度等の情報についての研究が現在進行中です。サイト-CN-34の職員は密閉空間に単独でいる状況を可能な限り避けるようにしてください。<br><br>
-
-      <strong>説明:</strong> SCP-CN-994はサイト-CN-34内部で発生する異常現象です。SCP-CN-994イベントが発生すると、影響を受けた人間が所在する密閉空間（閉め切ったオフィスやトイレ等）と外部を連絡している戸や窓が内部から開けなくなります。同時に、密閉空間内の壁面や床、障害物の表面には大量の眼球が徐々に浮かび上がります（以下、SCP-CN-994-1）。現在、SCP-CN-994-1を採取する試みは失敗に終わっています。少数の発生例において、影響を受けた者は使用している電子機器の画面上に大量の無意味な文字符号が出現したり、空間の四方から低く沈んだ衝撃音が発生したと報告しています。影響を受けた空間を外部から強引に開放するとイベントは終了し、SCP-CN-994-1及び空間内の異常は全て消失します。<br><br>
-
-      今の所、影響を受けた人間はおよそ4時間から2週間以内に各種手段を用いて自殺を図ります。この精神影響は記憶処理によって緩和させることが可能です。しかしその後、再び単独で密閉空間にいる状態になった場合、対象は除去された記憶を再度獲得します。これは対象により強烈な自殺衝動を抱かせる結果に繋がります。</div>
+葬式は正直やんないか、静かに小さく適当にしてほしいんだけど、<br>もしするってんなら私のツイッターに葬式の予定を載せてほしいの。<br>
+私のIDは【データ削除済】で、パスワードは【データ削除済】。<br>
+一人くらいは来るでしょう、まあ来ても来なくても確認取れるわけないか。<br>
+故人の意思によってドレスコードはレッド・ブラックがいいの。<br>
+赤いものを一つ着るか着けるか、持ってくるなりしてね。<br>「赤い」ものなら何でもいいんだよ。マルクスの本も可。<br>
+<br>
+鬱症と十数年一緒に暮らすのも大変だった。<br>
+大体鬱症という言葉そのものが憂鬱よ。<br>
+人の知能を食べて育つ病だし。<br>
+毎朝、毎日が過ぎるたびに私の知能と感覚が落ちるのを実感するのに、<br>誰がそれでも生きたいと思うだろうか？<br> 毎日が絶望で先が真っ暗で、<br>私は何もできないゴミという無能感の中で、到底無理でしょう。<br><br>
+否定しても無駄、私は何もできない人間の屑でした。<br>周りのせいじゃなくて、ただ自分自身がそうであるだけ。<br>どこの子として生まれても、私はきっと能無しだったはず。<br>
+5回やってやっと成功した貴重な実験体が実は失敗作だったなんて！<br>それをずっと隠してきててとても申し訳ない限りね。<br>
+<br>
+あとは何がいいかな？<br>
+うーん……私だって、愛してたよ。<br>
+<br>
+疲れるわ……本当に寝ないと。<br>
+死後の世界、そんなものはあってはならないの。<br>
+死んだら何もかも終わるってのに。<br>
+死んでも尚生きたいだ？冗談じゃないわ。<br>
+<br>
+疲れた。<br>
+休む。<br>
+<br><br>
+<br>
+私の名前は嫌いよ。<br>
+<br>
+<br>
+</div>
 
      </div>
 
-
     <script type="text/javascript">
       var time =10000
-      var ICU = ["出","て","い","け","デ","テ","イ","ケ"]
+      var ICU = ["出","て","い","け","覗","か","な","い","で"]
       var as ="div1"
       var counter=0;
       var flag=0;
@@ -63,7 +99,7 @@ $(this).next(".body-content").toggle();});
           var content=str.split("")
           var cache = Random(content.length)
 
-          for(i=0;i<5;i++){content[cache+i]=ICU[i]}
+          for(i=0;i<9;i++){content[cache+i]=ICU[i]}
           if(time>=100) time=time-1000
           else counter++
           if (counter>50000) {throw new Error("stop here");}
@@ -77,10 +113,11 @@ $(this).next(".body-content").toggle();});
         {
           if(flag==0)
           {
-            setTimeout("var a=1",10000)
-            document.write("<div>まだ見てるのね、懲りないの？それともこんなもんじゃ足りない？</div>")
+            setTimeout("var a=1",50000)
+            document.write("<div>まだいるんですか？何を期待してるの？</strong>  </div>")
             flag=flag+1
-            sleep(5000)
+            sleep(6000)
+           
           }
         }
       }
