--- a/icu.html
+++ b/icu.html
@@ -28,10 +28,8 @@
 全部わかってるから。思う存分ショック受けて、
 <br>思う存分私の最低な決定を罵っていいよ。<br><br>
 
-葬式は正直やんないか、静かに小さく適当にしてほしいんだけど、<br>もしするってんなら私のツイッターに葬式の予定を載せてほしいの。<br>
-私のIDは【データ削除済】で、パスワードは【データ削除済】。<br>
 一人くらいは来るでしょう、まあ来ても来なくても確認取れるわけないか。<br>
-故人の意思によってドレスコードはレッド・ブラックがいいの。<br>
+ドレスコードはレッド・ブラックがいいの。<br>
 赤いものを一つ着るか着けるか、持ってくるなりしてね。<br>「赤い」ものなら何でもいいんだよ。マルクスの本も可。<br>
 <br>
 鬱症と十数年一緒に暮らすのも大変だった。<br>
