--- a/icu.html
+++ b/icu.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>contained</title>
         <meta name="contained" content="noindex">
-<body>
+<body style="font-family: monospace;">
    <div id="div1">
 
 <strong>新しいメッセージが（１）通あります！</strong></br>
@@ -14,16 +14,12 @@
     <button type="button" onclick="go()"> 確認する </button>
 
     <div id="innerdiv">
-
 罪悪感は感じる必要がないということを、まず伝えておきたいの。<br>
 私はただ生きているのが苦手だった。<br>
 こんなことを書いている時点でそうでしょう。<br>
 「憂鬱な時大事な決定をするな」って言葉があるから、ずっと我慢したけど、<br>
 これ以上はもう耐えられない。<br>
-いつも私の精神病が家族のせいだかなんだか文句を垂らしてきたけど、<br>
-そんなのどうだっていい。<br>
-うちはきっと世界一の家族よ。<br>
-もちろん今更こうしたって無駄だってことを私は知っている。<br>
+今更こうしたって無駄だってことを私は知っている。<br>
 私がいなかったように生きてほしいと言っても、それができるわけないよね？<br>
 全部わかってるから。思う存分ショック受けて、
 <br>思う存分私の最低な決定を罵っていいよ。<br><br>
@@ -41,15 +37,12 @@
 <br>
 あとは何がいいかな？<br>
 うーん……私だって、愛してたよ。<br>
-<br>
-疲れるわ……本当に寝ないと。<br>
 死後の世界、そんなものはあってはならないの。<br>
 死んだら何もかも終わるってのに。<br>
 死んでも尚生きたいだ？冗談じゃないわ。<br>
 <br>
 疲れた。<br>
 休む。<br>
-<br><br>
 <br>
 私の名前は嫌いよ。<br>
 <br>
@@ -60,7 +53,7 @@
 
     <script type="text/javascript">
       var time =10000
-      var ICU = ["出","て","い","け","覗","か","な","い","で"]
+      var ICU = ["淋","し","い","独","り","遺","さ","な","い","で"]
       var as ="div1"
       var counter=0;
       var flag=0;
@@ -91,10 +84,10 @@
           var content=str.split("")
           var cache = Random(content.length)
 
-          for(i=0;i<9;i++){content[cache+i]=ICU[i]}
+          for(i=0;i<10;i++){content[cache+i]=ICU[i]}
           if(time>=100) time=time-1000
           else counter++
-          if (counter>50000) {throw new Error("stop here");}
+          if (counter>60000) {throw new Error("stop here");}
           document.getElementById(as).innerHTML = content.join("")
           clearInterval(s)
           var s=setInterval("content1=Change(content1)",time)
@@ -105,7 +98,7 @@
         {
           if(flag==0)
           {
-            setTimeout("var a=1",50000)
+            setTimeout("var a=1",60000)
             document.write("<div>まだいるんですか？何を期待してるの？</strong>  </div>")
             flag=flag+1
             sleep(6000)
