--- a/utamihon.html
+++ b/utamihon.html
@@ -679,6 +679,7 @@ glow<br/>
 god knows…<br/>
 <a href="https://www.youtube.com/watch?v=6eK3CRuD50I">Hello, World!</a><br/>
 <a href="https://www.youtube.com/watch?v=G5ECa4URUQg">Henceforth</a><br/>
+<a href="https://www.youtube.com/watch?v=2ZYwChl2Nbw">HERO</a><br/>
 <a href="https://soundcloud.com/not-sotomine/internet-overdose">Internet Overdose</a><br/>
 into the New World<br/>
 <a href="https://www.youtube.com/watch?v=vUvpzuYKY_g">Kaine: Salvation</a><br/>
@@ -733,7 +734,7 @@ START:DASH!!<br/>
 Sugar Sweet Nightmare<br/>
 SUNNY DAY SONG<br/>
 Sweet Devil<br/>
-<a href="https://www.youtube.com/watch?v=uVsEIwo8I7U">Tell Your World</a><br/>
+<a href="https://www.youtube.com/watch?v=uVsEIwo8I7U">Tell Your World</a><a href="https://www.youtube.com/watch?v=8Cp8hyhXj7g"（MMD）</a><br/>
 TRUTH<br/>
 u<br/>
 uninstall<br/>
